update content and data

--- a/data/cities/paris/gibert-joseph-paris-xviii.yml
+++ b/data/cities/paris/gibert-joseph-paris-xviii.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Boulevard Barbès"
 housenumber: 15
 phone: "+33 1 53 09 35 15"
-opening_hours: "Mo-Sa 10:00-19:00"
+opening_hours: "Mo-Sa 10:00-19:20+"
 website: "https://www.gibert.com/stores/paris-xviii-gibert-joseph-librairie-papeterie-musique-video"
