--- a/data/cities/versailles/so-blue.yml
+++ b/data/cities/versailles/so-blue.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: "Rue Hoche"
 housenumber: 16
 phone: ""
-opening_hours: ""
+opening_hours: "Tu-Fr 10:00-19:00; Sa 10:00-18:30"
 website: ""
