update content and data

--- a/data/cities/lhay-les-roses/ethnika-coiffure-afro.yml
+++ b/data/cities/lhay-les-roses/ethnika-coiffure-afro.yml
@@ -6,6 +6,6 @@ postcode: "94240"
 city: L'Haÿ-les-Roses
 street: "Rue des Marguerites"
 housenumber: 2
-phone: "+33769119607"
-opening_hours: "Mo-Su 09:00-19:00"
-website: ""
+phone: "+33769119607;06 52 90 94 87"
+opening_hours: "Tu-Sa 10:00-19:00; Su 10:00-18:00"
+website: "https://ethnika-coiffure-afro.business.site/"
