--- a/data/cities/montigny-les-cormeilles/alain-afflelou.yml
+++ b/data/cities/montigny-les-cormeilles/alain-afflelou.yml
@@ -7,5 +7,5 @@ city: Montigny-lès-Cormeilles
 street: "Boulevard Victor Bordier"
 housenumber: 124
 phone: "+33 1 39 31 05 85"
-opening_hours: "Mo-Su 10:00-19:30"
+opening_hours: "Mo-Sa 10:00-19:00"
 website: ""
