--- a/data/cities/paris/epicerie.yml
+++ b/data/cities/paris/epicerie.yml
@@ -1,11 +1,11 @@
-id: 3284894995
+id: 6015782153
 type: node
-latitude: 48.83712
-longitude: 2.25933
-postcode: "75016"
+latitude: 48.88751
+longitude: 2.35204
+postcode: "75018"
 city: Paris
-street: "Boulevard Murat"
-housenumber: 126
+street: "Rue de Suez"
+housenumber: 6
 phone: ""
 opening_hours: ""
 website: ""
