--- a/data/cities/paris/monoprix-8.yml
+++ b/data/cities/paris/monoprix-8.yml
@@ -1,11 +1,11 @@
-id: 7398600102
+id: 7398764369
 type: node
-latitude: 48.85514
-longitude: 2.32555
-postcode: "75007"
+latitude: 48.84778
+longitude: 2.26473
+postcode: "75016"
 city: Paris
-street: "Boulevard Raspail"
-housenumber: 6
-phone: "+33 1 42 84 89 70"
-opening_hours: "Mo-Sa 09:00-20:00; Su 11:00-19:00"
-website: "https://www.monoprix.fr/monoprix-raspail-paris-75007-s"
+street: "Rue d'Auteuil"
+housenumber: 49
+phone: "+33 1 46 47 20 71"
+opening_hours: "Mo-Sa 09:30-20:30"
+website: "https://www.monoprix.fr/monoprix-auteuil--paris-75016-s"
