--- a/data/cities/boulogne-billancourt/queues-de-cerises.yml
+++ b/data/cities/boulogne-billancourt/queues-de-cerises.yml
@@ -1,11 +1,11 @@
-id: 2837302859
+id: 4526679076
 type: node
-latitude: 48.84667
-longitude: 2.23949
+latitude: 48.83072
+longitude: 2.24531
 postcode: "92100"
 city: Boulogne-Billancourt
-street: "Avenue Jean Baptiste Clément"
-housenumber: 21
-phone: "+33 1 46 05 07 35"
+street: "Boulevard Jean Jaurès"
+housenumber: 227
+phone: "+33 1 41 41 08 22"
 opening_hours: "Mo-Sa 10:00-20:00"
-website: "http://www.queues-cerises.fr/"
+website: "https://www.queues-cerises.fr/"
