--- a/data/cities/gennevilliers/carrefour.yml
+++ b/data/cities/gennevilliers/carrefour.yml
@@ -1,11 +1,11 @@
-id: 63962431
+id: 1016211341
 type: way
-latitude: 48.92474
-longitude: 2.29161
+latitude: 48.92503
+longitude: 2.29288
 postcode: "92230"
 city: Gennevilliers
 street: "Rue Louis Calmel"
 housenumber: 21-23
 phone: "+33 1 47 99 66 79"
-opening_hours: "Mo-Th 08:30-21:00; Fr-Sa 08:30-22:00"
+opening_hours: "Mo-We 08:30-21:00; Th,Sa 08:30-22:00; Fr 08:30-18:15; Su 08:30-12:30"
 website: "http://www.carrefour.fr/magasin/gennevilliers/informations-pratiques"
