--- a/data/cities/lognes/aldi.yml
+++ b/data/cities/lognes/aldi.yml
@@ -8,4 +8,4 @@ street: "Rue Mozart"
 housenumber: 21
 phone: "+33 1 64 62 10 41"
 opening_hours: "Mo-Sa 08:00-20:00, Su 08:00-13:00"
-website: "https://www.leaderprice.fr/magasin/lognes"
+website: ""
