--- a/data/cities/paris/jarra-couture.yml
+++ b/data/cities/paris/jarra-couture.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue Doudeauville"
 housenumber: 22
 phone: "+33 6 12 22 56 96; +33 1 40 38 13 15"
-opening_hours: ""
+opening_hours: "Mo-Sa 19:00-21:10"
 website: ""
