--- a/data/cities/paris/laverie-libre-service-4.yml
+++ b/data/cities/paris/laverie-libre-service-4.yml
@@ -1,11 +1,11 @@
-id: 3284720408
+id: 3426526293
 type: node
-latitude: 48.83711
-longitude: 2.26085
-postcode: "75016"
+latitude: 48.83061
+longitude: 2.33427
+postcode: "75014"
 city: Paris
-street: "Boulevard Murat"
-housenumber: 132
+street: "Rue de la Tombe Issoire"
+housenumber: 44
 phone: ""
 opening_hours: ""
 website: ""
