--- a/data/cities/paris/norbert-bottier.yml
+++ b/data/cities/paris/norbert-bottier.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Avenue de Suffren"
 housenumber: 164
 phone: "+33 9 54 57 94 17"
-opening_hours: "Mo-Sa 08:30-19:00; Su 09:30-13:00"
+opening_hours: "Mo-Sa 08:30-19:00"
 website: "https://www.norbertbottier.com/"
