--- a/data/cities/emerainville/intermarche-super.yml
+++ b/data/cities/emerainville/intermarche-super.yml
@@ -6,6 +6,6 @@ postcode: "77184"
 city: Émerainville
 street: "Boulevard Olaff Palme"
 housenumber: 4
-phone: "0160951000"
+phone: "+33 1 60 95 10 00"
 opening_hours: "Mo-Sa 09:30-19:45"
 website: "https://www.intermarche.com/home/magasins/accueil/seine-et-marne/emerainville-05976.html"
