--- a/data/cities/gennevilliers/fnac.yml
+++ b/data/cities/gennevilliers/fnac.yml
@@ -6,6 +6,6 @@ postcode: "92230"
 city: Gennevilliers
 street: "Avenue du Général de Gaulle"
 housenumber: 112
-phone: "08 25 02 00 20"
+phone: "+33 8 25 02 00 20"
 opening_hours: "Mo-Sa 10:00-19:30; Su 10:00-19:00"
 website: "http://www.fnac.com/Gennevilliers/Fnac-Gennevilliers/cl101/w-4"
