--- a/data/cities/paris/bape.yml
+++ b/data/cities/paris/bape.yml
@@ -6,6 +6,6 @@ postcode: "75004"
 city: Paris
 street: "Rue de la Verrerie"
 housenumber: 34
-phone: "0 893 02 53 85"
+phone: "+33 893 02 53 85"
 opening_hours: "Mo-Sa 10:00-20:00; Su 10:00-21:00"
 website: "http://bapefrance.com"
