--- a/data/cities/paris/causses.yml
+++ b/data/cities/paris/causses.yml
@@ -4,7 +4,7 @@ latitude: 48.8801
 longitude: 2.33534
 postcode: "75009"
 city: Paris
-street: "Rue Notre-Dame de Lorette"
+street: "Rue Notre-Dame-de-Lorette"
 housenumber: 55
 phone: "+33 1 53 16 10 10"
 opening_hours: "Mo-Sa 10:00-21:00"
