--- a/data/cities/paris/le-repaire-de-bacchus-2.yml
+++ b/data/cities/paris/le-repaire-de-bacchus-2.yml
@@ -5,7 +5,7 @@ longitude: 2.292
 postcode: "75015"
 city: Paris
 street: "Rue de Lourmel"
-housenumber: 4
+housenumber: 4 b
 phone: ""
 opening_hours: ""
 website: ""
