--- a/data/cities/paris/un-monde-vegan.yml
+++ b/data/cities/paris/un-monde-vegan.yml
@@ -4,7 +4,7 @@ latitude: 48.86774
 longitude: 2.3568
 postcode: "75003"
 city: Paris
-street: "Rue Notre-Dame de Nazareth"
+street: "Rue Notre-Dame-de-Nazareth"
 housenumber: 64
 phone: "+33 1 42 77 49 48"
 opening_hours: "Mo-Sa 10:00-20:00"
