--- a/data/cities/roissy-en-brie/midas.yml
+++ b/data/cities/roissy-en-brie/midas.yml
@@ -6,6 +6,6 @@ postcode: "77680"
 city: Roissy-en-Brie
 street: "Route d'Ozoir"
 housenumber: 
-phone: "6000579081"
+phone: "+33 1 60 60 03 20"
 opening_hours: ""
 website: "https://www.midas.fr/"
