--- a/data/cities/romainville/la-signature-de-lartisan.yml
+++ b/data/cities/romainville/la-signature-de-lartisan.yml
@@ -6,6 +6,6 @@ postcode: "93230"
 city: Romainville
 street: "Rue de Paris"
 housenumber: 7
-phone: "0983852351"
+phone: "+33 9 83 85 23 51"
 opening_hours: "tu-Su 07:00-20:00"
 website: "https://la-signature-de-lartisan.business.site/"
