--- a/data/cities/acheres/bouygues-telecom.yml
+++ b/data/cities/acheres/bouygues-telecom.yml
@@ -6,6 +6,6 @@ postcode: "78260"
 city: Achères
 street: "Avenue Wolfgang Amadeus Mozart"
 housenumber: 3
-phone: "01 39 11 03 53"
+phone: "+33 1 39 11 03 53"
 opening_hours: "Mo-Sa 09:00-17:15"
 website: "https://boutiques.bouyguestelecom.fr/bouyguestelecom/fr/shop/france/ile-de-france/yvelines/acheres/cc-acheres/4990125"
