--- a/data/cities/carrieres-sous-poissy/peugeot-garage-des-grands-champs.yml
+++ b/data/cities/carrieres-sous-poissy/peugeot-garage-des-grands-champs.yml
@@ -6,6 +6,6 @@ postcode: "78955"
 city: Carrières-sous-Poissy
 street: "Avenue de l'Hautil"
 housenumber: 327
-phone: "01 39 74 63 87"
+phone: "+33 1 39 74 63 87"
 opening_hours: ""
 website: "https://concessions.peugeot.fr/carrieres-sous-poissy/vehicules-neufs/peugeot-webstore/"
