--- a/data/cities/champigny-sur-marne/son-video.yml
+++ b/data/cities/champigny-sur-marne/son-video.yml
@@ -6,6 +6,6 @@ postcode: "94500"
 city: Champigny-sur-Marne
 street: ""
 housenumber: 314
-phone: "0 826 96 02 90"
+phone: "+33 826 96 02 90"
 opening_hours: "Mo-Sa 09:00-18:30"
 website: "https://www.son-video.com"
