--- a/data/cities/cormeilles-en-parisis/lidl.yml
+++ b/data/cities/cormeilles-en-parisis/lidl.yml
@@ -6,6 +6,6 @@ postcode: "95240"
 city: Cormeilles-en-Parisis
 street: "Boulevard des Bois Rochefort"
 housenumber: 
-phone: "08 00 90 03 43"
+phone: "+33 8 00 90 03 43"
 opening_hours: "Mo-Sa 08:30-20:00"
 website: ""
