--- a/data/cities/le-perreux-sur-marne/boucherie-du-parc.yml
+++ b/data/cities/le-perreux-sur-marne/boucherie-du-parc.yml
@@ -7,5 +7,5 @@ city: Le Perreux-sur-Marne
 street: "Rue de la Station"
 housenumber: 1
 phone: "+33 1 43 24 34 48"
-opening_hours: "Tu-Sa 08:00-13:00, 15h30-19h30; Su 08:00-12:30; "
+opening_hours: "Tu-Sa 08:00-13:00,15:30-19:30; Su 08:00-12:30;"
 website: ""
