--- a/data/cities/meaux/yves-rocher.yml
+++ b/data/cities/meaux/yves-rocher.yml
@@ -1,10 +1,10 @@
 id: 3579824693
 type: node
-latitude: 48.95946
-longitude: 2.8814
+latitude: 48.95944
+longitude: 2.88138
 postcode: "77100"
 city: Meaux
-street: "Rue du general leclerc"
+street: "Rue du Général Leclerc"
 housenumber: 24
 phone: ""
 opening_hours: "Tu-Sa 09:30-19:00"
