--- a/data/cities/morangis/ds-pieces-auto.yml
+++ b/data/cities/morangis/ds-pieces-auto.yml
@@ -7,5 +7,5 @@ city: Morangis
 street: "Place Gabriel Fontaine"
 housenumber: 2
 phone: "+33164861205"
-opening_hours: "Mo-Fr 8:30-12:30, 14:00-18:30; Sa 8:30-12:30"
+opening_hours: "Mo-Fr 08:30-12:30,14:00-18:30; Sa 08:30-12:30"
 website: "http://dspiecesauto.gefauto-distribution.fr/"
