--- a/data/cities/noisy-le-grand/fnac.yml
+++ b/data/cities/noisy-le-grand/fnac.yml
@@ -6,6 +6,6 @@ postcode: "93160"
 city: Noisy-le-Grand
 street: "Clos du Mont d'Est"
 housenumber: 270
-phone: "0825 020 020"
+phone: "+33 825 020 020"
 opening_hours: "Mo-Sa 10:00-20:00"
 website: "https://www.fnac.com/Noisy-Le-Grand/Fnac-Noisy-Le-Grand/cl79/w-4"
