--- a/data/cities/paris/body-coach-center.yml
+++ b/data/cities/paris/body-coach-center.yml
@@ -6,6 +6,6 @@ postcode: "75001"
 city: Paris
 street: "Rue Saint-Honoré"
 housenumber: 129
-phone: "01 45 08 38 03"
+phone: "+33 1 45 08 38 03"
 opening_hours: "Mo-Sa 11:00-20:00"
 website: ""
