--- a/data/cities/paris/carrefour-city-3.yml
+++ b/data/cities/paris/carrefour-city-3.yml
@@ -4,7 +4,7 @@ latitude: 48.8417
 longitude: 2.33236
 postcode: "75006"
 city: Paris
-street: "Rue Notre-Dame des Champs"
+street: "Rue Notre-Dame-des-Champs"
 housenumber: 84
 phone: "+33 1 44 41 03 14"
 opening_hours: "Mo-Sa 07:00-22:00; Su 09:00-22:00"
