--- a/data/cities/paris/cyprien.yml
+++ b/data/cities/paris/cyprien.yml
@@ -4,7 +4,7 @@ latitude: 48.88039
 longitude: 2.33526
 postcode: "75009"
 city: Paris
-street: "Rue Notre-Dame de Lorette"
+street: "Rue Notre-Dame-de-Lorette"
 housenumber: 64
 phone: "+33 1 44 63 94 20"
 opening_hours: "Tu-Su 07:00-20:30"
