--- a/data/cities/paris/decathlon-paris-rive-gauche.yml
+++ b/data/cities/paris/decathlon-paris-rive-gauche.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue de Tolbiac"
 housenumber: 113
 phone: "+33.1 44 06 82 00"
-opening_hours: ""
+opening_hours: "Mo-Sa 09:30-20:30"
 website: ""
