--- a/data/cities/paris/du-vert-en-bocal.yml
+++ b/data/cities/paris/du-vert-en-bocal.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue Saint-Paul"
 housenumber: 11
 phone: ""
-opening_hours: "Tu-Fr 10:30-14:00,16:00-19:30; Sa 10:30-19:00"
-website: ""
+opening_hours: "Tu-Th 10:30-14:00,15:30-19:30; Fr 10:30-14:00,15:30-19:00; Sa 10:30-19:00"
+website: "https://duvertenbocal.fr/"
