--- a/data/cities/paris/ma-petite-ferme.yml
+++ b/data/cities/paris/ma-petite-ferme.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue Brancion"
 housenumber: 25
 phone: "+33 1 71 20 94 09"
-opening_hours: "We-Sa 10:00-16:00"
+opening_hours: "Tu-Fr 10:00-14:00,15:00-20:00; Mo 14:00-20:00; Sa 10:00-19:00"
 website: ""
