--- a/data/cities/paris/or-du-monde.yml
+++ b/data/cities/paris/or-du-monde.yml
@@ -4,7 +4,7 @@ latitude: 48.86754
 longitude: 2.34139
 postcode: "75002"
 city: Paris
-street: "Rue Notre-Dame des Victoires"
+street: "Rue Notre-Dame-des-Victoires"
 housenumber: 7
 phone: "+33 1 43 35 04 75"
 opening_hours: "Tu-Sa 11:00-19:00"
