--- a/data/cities/paris/pivoines-and-love.yml
+++ b/data/cities/paris/pivoines-and-love.yml
@@ -6,6 +6,6 @@ postcode: "75012"
 city: Paris
 street: "Rue Traversière"
 housenumber: 59
-phone: ""
+phone: "+33 6 64 59 31 25"
 opening_hours: ""
 website: ""
