--- a/data/cities/poissy/aux-tresors-de-marie.yml
+++ b/data/cities/poissy/aux-tresors-de-marie.yml
@@ -6,6 +6,6 @@ postcode: "78300"
 city: Poissy
 street: "Rue Saint-Sébastien"
 housenumber: 
-phone: "0139653291"
+phone: "+33 1 39 65 32 91"
 opening_hours: ""
 website: ""
