--- a/data/cities/puteaux/yves-rocher.yml
+++ b/data/cities/puteaux/yves-rocher.yml
@@ -7,5 +7,5 @@ city: Puteaux
 street: "Rue Jean Jaurès"
 housenumber: 120
 phone: ""
-opening_hours: "Mo-Th 10:00-19:30; Fr-Sa 09:30-19:30"
+opening_hours: "Mo-Sa 10:00-19:30"
 website: "https://www.yves-rocher.fr/tout-sur-les-magasins/ile-de-france/puteaux/puteaux/S-FRYROC706"
