--- a/data/cities/rungis/beauty-by-mel.yml
+++ b/data/cities/rungis/beauty-by-mel.yml
@@ -7,5 +7,5 @@ city: Rungis
 street: "Rue Notre-Dame"
 housenumber: 27 bis
 phone: "+33 6 59 07 73 26"
-opening_hours: ""
+opening_hours: "sur rdv"
 website: ""
