--- a/data/cities/saint-denis/next-shot.yml
+++ b/data/cities/saint-denis/next-shot.yml
@@ -6,6 +6,6 @@ postcode: "93200"
 city: Saint-Denis
 street: "Rue Ampère"
 housenumber: 20
-phone: "01 48 91 09 65"
+phone: "+33 1 48 91 09 65"
 opening_hours: "Mo-Fr 09:00-19:00"
 website: "nextshot.com"
