--- a/data/cities/sainte-genevieve-des-bois/tares-du-bocal.yml
+++ b/data/cities/sainte-genevieve-des-bois/tares-du-bocal.yml
@@ -7,5 +7,5 @@ city: Sainte-Geneviève-des-Bois
 street: "Avenue Gabriel Péri"
 housenumber: 27
 phone: ""
-opening_hours: "Mo off; Tu-Su 09:30-13:30,15:30-19:30; Sa 09:30-13:30,15:00-19:30; Su off"
+opening_hours: "Mo off; Tu-Fr 09:30-13:00,15:30-19:00; Sa 09:30-13:00,15:00-19:00; Su off"
 website: "https://tares-du-bocal.fr/"
