--- a/data/cities/triel-sur-seine/maison-lamotte.yml
+++ b/data/cities/triel-sur-seine/maison-lamotte.yml
@@ -6,6 +6,6 @@ postcode: "78510"
 city: Triel-sur-Seine
 street: "Rue Paul Doumer"
 housenumber: 216
-phone: "01 39 70 62 41"
+phone: "+33 1 39 70 62 41"
 opening_hours: "Tu-Fr 07:00-13:30,15:30-20:00; Sa 07:00-13:30,16:00-20:00; Su 07:00-13:00"
 website: ""
