update content and data

--- a/data/cities/issy-les-moulineaux/franprix.yml
+++ b/data/cities/issy-les-moulineaux/franprix.yml
@@ -1,11 +1,11 @@
-id: 608719991
+id: 260284695
 type: node
-latitude: 48.81766
-longitude: 2.26046
+latitude: 48.82597
+longitude: 2.27327
 postcode: "92130"
 city: Issy-les-Moulineaux
-street: "Rue d'Erevan"
-housenumber: 54
-phone: "+33 1 46 44 04 42"
-opening_hours: "Mo-Sa 09:00-19:45; Su 09:00-12:45;PH off"
-website: "http://www.franprix.fr"
+street: "Avenue de la République"
+housenumber: 16
+phone: ""
+opening_hours: "Mo-Su 09:00-21:00"
+website: "https://www.franprix.fr/magasins"
