--- a/data/cities/paris/les-traversees.yml
+++ b/data/cities/paris/les-traversees.yml
@@ -6,6 +6,6 @@ postcode: "75005"
 city: Paris
 street: "Rue Édouard Quénu"
 housenumber: 2
-phone: ""
-opening_hours: "Mo-Sa 10:00-19:30; Su 10:00-13:30"
+phone: "+33 1 43 31 74 08"
+opening_hours: "Mo-Sa 10:00-13:30,15:00-19:30; Su 10:00-13:30"
 website: "https://www.lestraversees.com/"
