--- a/data/cities/boulogne-billancourt/la-vie-claire.yml
+++ b/data/cities/boulogne-billancourt/la-vie-claire.yml
@@ -7,5 +7,5 @@ city: Boulogne-Billancourt
 street: "Boulevard de la République"
 housenumber: 68
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 09:30-20:00; Su 09:30-12:45"
 website: "https://www.lavieclaire.com/magasin-bio/boulogne-republique.html"
