--- a/data/cities/issy-les-moulineaux/franprix-2.yml
+++ b/data/cities/issy-les-moulineaux/franprix-2.yml
@@ -1,11 +1,11 @@
-id: 7438400247
+id: 608719991
 type: node
-latitude: 48.81837
-longitude: 2.25264
+latitude: 48.81766
+longitude: 2.26046
 postcode: "92130"
 city: Issy-les-Moulineaux
-street: "Avenue de Verdun"
-housenumber: 139 bis
-phone: ""
-opening_hours: ""
-website: ""
+street: "Rue d'Erevan"
+housenumber: 54
+phone: "+33 1 46 44 04 42"
+opening_hours: "Mo-Sa 09:00-19:45; Su 09:00-12:45;PH off"
+website: "http://www.franprix.fr"
