--- a/data/cities/paris/juji-ya.yml
+++ b/data/cities/paris/juji-ya.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue Sainte-Anne"
 housenumber: 46
 phone: "+33 1 42 86 02 22"
-opening_hours: "Mo-Su, 11:30-22:00"
+opening_hours: "Mo-Su 11:30-22:00"
 website: "https://www.otodoke.fr/"
