--- a/data/cities/saint-pierre-du-perray/latelier-floral.yml
+++ b/data/cities/saint-pierre-du-perray/latelier-floral.yml
@@ -7,5 +7,5 @@ city: Saint-Pierre-du-Perray
 street: "Rue du Clos Guinaut"
 housenumber: 
 phone: "+33160756497"
-opening_hours: ""
+opening_hours: "Mo-Fr 08:30-19:30; Sa 09:00-19:30"
 website: ""
