update content and data

--- a/data/cities/beauchamp/lepi-de-ble.yml
+++ b/data/cities/beauchamp/lepi-de-ble.yml
@@ -6,6 +6,6 @@ postcode: "95250"
 city: Beauchamp
 street: "Avenue du Général Leclerc"
 housenumber: 39bis
-phone: "01 30 40 85 83"
+phone: "+33 1 30 40 85 83"
 opening_hours: ""
 website: ""
