--- a/data/cities/cergy/boucherie-de-la-fontaine.yml
+++ b/data/cities/cergy/boucherie-de-la-fontaine.yml
@@ -6,6 +6,6 @@ postcode: "95800"
 city: Cergy
 street: "Rue de l'Abondance"
 housenumber: 37
-phone: "0130304044"
+phone: "+33 130304044"
 opening_hours: "Mo-Sa 08:00-19:30, Su 8:00-18:00"
 website: ""
