--- a/data/cities/croissy-sur-seine/creatif-studio-coiffure.yml
+++ b/data/cities/croissy-sur-seine/creatif-studio-coiffure.yml
@@ -6,6 +6,6 @@ postcode: "78290"
 city: Croissy-sur-Seine
 street: "Boulevard Fernand Hostachy"
 housenumber: 31
-phone: "0787575538"
+phone: "+33 787575538"
 opening_hours: "Tu-Fr 09:00-19:00; Sa 09:00-18:30"
 website: "https://creatifstd.fr/"
