--- a/data/cities/dourdan/linstant-vrac.yml
+++ b/data/cities/dourdan/linstant-vrac.yml
@@ -6,6 +6,6 @@ postcode: "91410"
 city: Dourdan
 street: "Rue Saint-Germain"
 housenumber: 3
-phone: "0160803069"
+phone: "+33 160803069"
 opening_hours: "Tuesday-Saturday 10h00-13h00 / 15h00-19h00"
 website: "http://www.linstantvrac.com/"
