--- a/data/cities/magny-les-hameaux/le-monde-des-fleurs.yml
+++ b/data/cities/magny-les-hameaux/le-monde-des-fleurs.yml
@@ -6,6 +6,6 @@ postcode: "78114"
 city: Magny-les-Hameaux
 street: "Rue Vincent Van Gogh Centre Commercial Intermarché"
 housenumber: 
-phone: "01 30 47 22 78"
+phone: "+33 1 30 47 22 78"
 opening_hours: ""
 website: ""
