--- a/data/cities/montigny-le-bretonneux/furet-du-nord.yml
+++ b/data/cities/montigny-le-bretonneux/furet-du-nord.yml
@@ -6,6 +6,6 @@ postcode: "78180"
 city: Montigny-le-Bretonneux
 street: "Avenue de la Source de la Bièvre"
 housenumber: 1
-phone: "01 34 91 02 30"
+phone: "+33 1 34 91 02 30"
 opening_hours: "Mo-Sa  10:00 - 20:00"
 website: "https://www.furet.com/ebooks/montigny-le-bretonneux-victor-r-belot-9782402265447_9782402265447_1.html"
