--- a/data/cities/paris/atelier-du-temps-passe.yml
+++ b/data/cities/paris/atelier-du-temps-passe.yml
@@ -6,6 +6,6 @@ postcode: "75012"
 city: Paris
 street: "Avenue Daumesnil"
 housenumber: 3
-phone: "01 43 07 72 26"
+phone: "+33 1 43 07 72 26"
 opening_hours: ""
 website: "https://atelierdutempspasse.fr/"
