--- a/data/cities/paris/boulanger-5.yml
+++ b/data/cities/paris/boulanger-5.yml
@@ -6,6 +6,6 @@ postcode: "75006"
 city: Paris
 street: "Rue de Rennes"
 housenumber: 128
-phone: "0 800 30 30 11"
+phone: "+33 800 30 30 11"
 opening_hours: ""
 website: "https://www.boulanger.com/"
