--- a/data/cities/paris/cycles-minutes.yml
+++ b/data/cities/paris/cycles-minutes.yml
@@ -6,6 +6,6 @@ postcode: "75010"
 city: Paris
 street: "Boulevard de Magenta"
 housenumber: 29b
-phone: "01 40 18 49 12"
+phone: "+33 1 40 18 49 12"
 opening_hours: "Mo-Su 09:00-19:00"
 website: "http://www.cyclesminutes.fr/"
