--- a/data/cities/paris/cyril-lignac.yml
+++ b/data/cities/paris/cyril-lignac.yml
@@ -6,6 +6,6 @@ postcode: "75015"
 city: Paris
 street: "Boulevard Pasteur"
 housenumber: 55
-phone: "01 55 87 21 40"
+phone: "+33 1 55 87 21 40"
 opening_hours: "Mo-Su 10:00-19:30"
 website: "https://cyrillignac.com/"
