--- a/data/cities/paris/latelier-de-sasha.yml
+++ b/data/cities/paris/latelier-de-sasha.yml
@@ -6,6 +6,6 @@ postcode: "75012"
 city: Paris
 street: "Avenue du Général Michel Bizot"
 housenumber: 101
-phone: "0143470039"
+phone: "+33 143470039"
 opening_hours: ""
 website: ""
