--- a/data/cities/paris/picard-13.yml
+++ b/data/cities/paris/picard-13.yml
@@ -1,11 +1,11 @@
-id: 3176697770
+id: 3261639861
 type: node
-latitude: 48.84741
-longitude: 2.31797
-postcode: "75007"
+latitude: 48.84726
+longitude: 2.30132
+postcode: "75015"
 city: Paris
-street: "Rue de Sèvres"
-housenumber: 80b
+street: "Rue Cambronne"
+housenumber: 2
 phone: ""
 opening_hours: ""
 website: ""
