--- a/data/cities/paris/picard-25.yml
+++ b/data/cities/paris/picard-25.yml
@@ -1,11 +1,11 @@
-id: 6031743763
+id: 7659530635
 type: node
-latitude: 48.89086
-longitude: 2.31945
-postcode: "75017"
+latitude: 48.88491
+longitude: 2.33334
+postcode: "75018"
 city: Paris
-street: "Avenue de Clichy"
-housenumber: 137
-phone: ""
-opening_hours: ""
-website: "https://magasins.picard.fr/153-picard-brochant?utm_source=gmb"
+street: "Rue Cauchois"
+housenumber: 1
+phone: "+33 1 42 58 57 48"
+opening_hours: "Mo-Sa 09:00-20:00, Su 09:00-12:45"
+website: "https://magasins.picard.fr/184-picard-cauchois"
