--- a/data/cities/paris/picard-26.yml
+++ b/data/cities/paris/picard-26.yml
@@ -1,11 +1,11 @@
-id: 7659530635
+id: 9653872050
 type: node
-latitude: 48.88491
-longitude: 2.33334
-postcode: "75018"
+latitude: 48.85555
+longitude: 2.2753
+postcode: "75016"
 city: Paris
-street: "Rue Cauchois"
-housenumber: 1
-phone: "+33 1 42 58 57 48"
-opening_hours: "Mo-Sa 09:00-20:00, Su 09:00-12:45"
-website: "https://magasins.picard.fr/184-picard-cauchois"
+street: "Rue de Boulainvilliers"
+housenumber: 42
+phone: "+33 1 45 20 73 50"
+opening_hours: "Mo-Sa 09:00-20:30; Su 09:00-12:45"
+website: "https://magasins.picard.fr/131-picard-boulainvilliers"
