--- a/data/cities/paris/troc-de-la-muette.yml
+++ b/data/cities/paris/troc-de-la-muette.yml
@@ -6,6 +6,6 @@ postcode: "75116"
 city: Paris
 street: "Rue de la Pompe"
 housenumber: 21
-phone: "01 45 04 06 10"
+phone: "+33 1 45 04 06 10"
 opening_hours: "Mo 14:00-18:00; Tu-Sa 11:30-18:00"
 website: "http://www.troc-delamuette.com/"
