--- a/data/cities/paris/viande-a-part.yml
+++ b/data/cities/paris/viande-a-part.yml
@@ -6,6 +6,6 @@ postcode: "75018"
 city: Paris
 street: "Rue Ramey"
 housenumber: 63B
-phone: "+33 1 42 57 77 70"
+phone: ""
 opening_hours: ""
 website: ""
