--- a/data/cities/saint-germain-en-laye/cuirs-de-france.yml
+++ b/data/cities/saint-germain-en-laye/cuirs-de-france.yml
@@ -6,6 +6,6 @@ postcode: "78100"
 city: Saint-Germain-en-Laye
 street: "Rue du Vieux Marché"
 housenumber: 17
-phone: "01 34 51 18 01"
+phone: "+33 1 34 51 18 01"
 opening_hours: "Tu-Sa 10:00-13:00,14:00-19:00; Su 10:00-13:00"
 website: ""
