--- a/data/cities/thiverval-grignon/boutique-gourmande-des-lycees-agricoles.yml
+++ b/data/cities/thiverval-grignon/boutique-gourmande-des-lycees-agricoles.yml
@@ -6,6 +6,6 @@ postcode: "78850"
 city: Thiverval-Grignon
 street: "Route de la Ferme"
 housenumber: 
-phone: "0961340331"
+phone: "+33 961340331"
 opening_hours: ""
 website: "http://boutiquedeslyceesagricoles.com/"
