--- a/data/cities/vert-le-grand/kryss-coiffure.yml
+++ b/data/cities/vert-le-grand/kryss-coiffure.yml
@@ -6,6 +6,6 @@ postcode: "91810"
 city: Vert-le-Grand
 street: "Place de la mairie"
 housenumber: 12
-phone: "0164561711"
+phone: "+33 164561711"
 opening_hours: ""
 website: ""
