--- a/data/cities/beauchamp/lili-fleurs.yml
+++ b/data/cities/beauchamp/lili-fleurs.yml
@@ -6,6 +6,6 @@ postcode: "95250"
 city: Beauchamp
 street: "Avenue du Général Leclerc"
 housenumber: 61
-phone: "07 77 31 11 31"
+phone: "+33 7 77 31 11 31"
 opening_hours: ""
 website: ""
