--- a/data/cities/bessancourt/u-express.yml
+++ b/data/cities/bessancourt/u-express.yml
@@ -6,6 +6,6 @@ postcode: "95550"
 city: Bessancourt
 street: "Avenue de la République"
 housenumber: 116 TER
-phone: "0130402479"
+phone: "+33 130402479"
 opening_hours: "Mo-Sa 09:00-19:45; Su 09:00-12:45"
 website: "https://www.magasins-u.com/magasin/uexpress-bessancourt"
