--- a/data/cities/brunoy/encadrement-flamant.yml
+++ b/data/cities/brunoy/encadrement-flamant.yml
@@ -6,6 +6,6 @@ postcode: "91800"
 city: Brunoy
 street: "Boulevard Charles de Gaulle"
 housenumber: 6
-phone: "01 69 83 30 14"
+phone: "+33 1 69 83 30 14"
 opening_hours: "Tu-Fr 09:30-12:30,14:00-18:00"
 website: "https://www.encadrement-flamant.com"
