--- a/data/cities/croissy-sur-seine/cecile-et-olivier-cote.yml
+++ b/data/cities/croissy-sur-seine/cecile-et-olivier-cote.yml
@@ -6,6 +6,6 @@ postcode: "78290"
 city: Croissy-sur-Seine
 street: "Boulevard Fernand Hostachy"
 housenumber: 36
-phone: "01 30 15 19 19"
+phone: "+33 1 30 15 19 19"
 opening_hours: ""
 website: "https://coc-immo.com/"
