--- a/data/cities/la-courneuve/franprix.yml
+++ b/data/cities/la-courneuve/franprix.yml
@@ -1,7 +1,7 @@
-id: 67180733
-type: way
-latitude: 48.92816
-longitude: 2.39345
+id: 9923568541
+type: node
+latitude: 48.92771
+longitude: 2.39283
 postcode: "93120"
 city: La Courneuve
 street: ""
