--- a/data/cities/milly-la-foret/ad-garage-de-milly.yml
+++ b/data/cities/milly-la-foret/ad-garage-de-milly.yml
@@ -6,6 +6,6 @@ postcode: "91490"
 city: Milly-la-Forêt
 street: "Route de Fontainebleau"
 housenumber: 17
-phone: "0164989241"
+phone: "+33 164989241"
 opening_hours: ""
 website: "https://www.ad.fr/"
