--- a/data/cities/milly-la-foret/husse-milly.yml
+++ b/data/cities/milly-la-foret/husse-milly.yml
@@ -6,6 +6,6 @@ postcode: "91490"
 city: Milly-la-Forêt
 street: "Rue Saint-Jacques"
 housenumber: 16
-phone: "0160774668"
+phone: "+33 160774668"
 opening_hours: ""
 website: ""
