--- a/data/cities/milly-la-foret/la-beaute-au-naturelle-et-lui.yml
+++ b/data/cities/milly-la-foret/la-beaute-au-naturelle-et-lui.yml
@@ -6,6 +6,6 @@ postcode: "91490"
 city: Milly-la-Forêt
 street: "Place du Colombier"
 housenumber: 3
-phone: "0164988282"
+phone: "+33 164988282"
 opening_hours: ""
 website: "http://beautenaturelle91.com/"
