--- a/data/cities/milly-la-foret/milly-orthopedie.yml
+++ b/data/cities/milly-la-foret/milly-orthopedie.yml
@@ -6,6 +6,6 @@ postcode: "91490"
 city: Milly-la-Forêt
 street: "Rue Saint-Jacques"
 housenumber: 7
-phone: "0952884257"
+phone: "+33 952884257"
 opening_hours: ""
 website: "https://milly-orthopedie.business.site/?utm_source=gmb&utm_medium=referral"
