--- a/data/cities/milly-la-foret/multimedia-audio-menager.yml
+++ b/data/cities/milly-la-foret/multimedia-audio-menager.yml
@@ -6,6 +6,6 @@ postcode: "91490"
 city: Milly-la-Forêt
 street: "Rue Saint-Jacques"
 housenumber: 14
-phone: "0951432469"
+phone: "+33 951432469"
 opening_hours: ""
 website: "https://multimedia-audio-menager.business.site/"
