--- a/data/cities/montgeron/centre-auto-ams-91.yml
+++ b/data/cities/montgeron/centre-auto-ams-91.yml
@@ -6,6 +6,6 @@ postcode: "91230"
 city: Montgeron
 street: "Rue Mercure"
 housenumber: 32
-phone: "0749101001"
+phone: "+33 749101001"
 opening_hours: "Mo-Sa 10:00-18:00"
 website: "https://www.centre-auto-ams.fr/"
