--- a/data/cities/palaiseau/la-copie.yml
+++ b/data/cities/palaiseau/la-copie.yml
@@ -6,6 +6,6 @@ postcode: "91120"
 city: Palaiseau
 street: "Avenue du 8 Mai 1945"
 housenumber: 20
-phone: "09 74 56 17 23"
+phone: "+33 9 74 56 17 23"
 opening_hours: "Mo-Fr 09:00-13:00,14:30-18:30; Sa 09:30-12:00"
 website: "https://www.lacopiesarl.fr/"
