--- a/data/cities/paris/daumal.yml
+++ b/data/cities/paris/daumal.yml
@@ -6,6 +6,6 @@ postcode: "75116"
 city: Paris
 street: "Rue de la Pompe"
 housenumber: 21
-phone: "01 45 03 13 52"
+phone: "+33 1 45 03 13 52"
 opening_hours: ""
 website: "http://daumal-cuisines.com/"
