--- a/data/cities/paris/g20-3.yml
+++ b/data/cities/paris/g20-3.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Boulevard du Montparnasse"
 housenumber: 55
 phone: "+33 1 43 27 05 76"
-opening_hours: ""
+opening_hours: "Mo-Sa 07:00-24:00; Su 09:00-24:00"
 website: "https://www.supermarchesg20.com/nos-magasins/mk-montparnasse"
