--- a/data/cities/paris/kang-sheng-yuan.yml
+++ b/data/cities/paris/kang-sheng-yuan.yml
@@ -6,6 +6,6 @@ postcode: "75005"
 city: Paris
 street: "Rue Lacépède"
 housenumber: 30(bi)
-phone: "09 88 31 72 00"
+phone: "+33 9 88 31 72 00"
 opening_hours: "Mo-Su 10:30-20:30"
 website: "https://kangshengyuan.fr/"
