--- a/data/cities/paris/loccaserie.yml
+++ b/data/cities/paris/loccaserie.yml
@@ -6,6 +6,6 @@ postcode: "75116"
 city: Paris
 street: "Rue de la Pompe"
 housenumber: 30
-phone: "01 45 03 16 56"
+phone: "+33 1 45 03 16 56"
 opening_hours: "Mo-Fr 11:00-19:00"
 website: ""
