--- a/data/cities/paris/picard-15.yml
+++ b/data/cities/paris/picard-15.yml
@@ -1,11 +1,11 @@
-id: 3299205632
+id: 3462148793
 type: node
-latitude: 48.83793
-longitude: 2.4037
-postcode: "75012"
+latitude: 48.86405
+longitude: 2.34885
+postcode: ""
 city: Paris
-street: "Avenue du Général Michel Bizot"
-housenumber: 89-93
+street: ""
+housenumber: 
 phone: ""
-opening_hours: "Mo-Sa 09:00-20:30, Su 09:00-12:45"
+opening_hours: ""
 website: ""
