--- a/data/cities/paris/picard-17.yml
+++ b/data/cities/paris/picard-17.yml
@@ -1,11 +1,11 @@
-id: 3668907094
+id: 4460618876
 type: node
-latitude: 48.86899
-longitude: 2.36662
-postcode: "75010"
+latitude: 48.84098
+longitude: 2.28725
+postcode: "75015"
 city: Paris
-street: "Quai de Valmy"
-housenumber: 33
-phone: "+33 1 40 03 02 29"
-opening_hours: "Mo-Sa 09:00-20:00; Su 09:00-12:45"
-website: "https://magasins.picard.fr/965-picard-valmy"
+street: "Avenue Félix Faure"
+housenumber: 48
+phone: ""
+opening_hours: ""
+website: ""
