--- a/data/cities/paris/picard-23.yml
+++ b/data/cities/paris/picard-23.yml
@@ -1,11 +1,11 @@
-id: 5556165361
+id: 5911474742
 type: node
-latitude: 48.83493
-longitude: 2.30945
-postcode: "75015"
+latitude: 48.88235
+longitude: 2.30385
+postcode: "75017"
 city: Paris
-street: "Rue Castagnary"
-housenumber: 22
-phone: ""
-opening_hours: "Mo-Sa 09:00-20:00; Su 09:00-12:45; PH closed"
-website: ""
+street: "Rue de Prony"
+housenumber: 55
+phone: "+33 1 46 22 82 10"
+opening_hours: "Mo-Sa 09:00-20:30"
+website: "https://magasins.picard.fr/2204-picard-prony"
