--- a/data/cities/paris/picard-24.yml
+++ b/data/cities/paris/picard-24.yml
@@ -1,11 +1,11 @@
-id: 5911474742
+id: 6031743763
 type: node
-latitude: 48.88235
-longitude: 2.30385
+latitude: 48.89086
+longitude: 2.31945
 postcode: "75017"
 city: Paris
-street: "Rue de Prony"
-housenumber: 55
-phone: "+33 1 46 22 82 10"
-opening_hours: "Mo-Sa 09:00-20:30"
-website: "https://magasins.picard.fr/2204-picard-prony"
+street: "Avenue de Clichy"
+housenumber: 137
+phone: ""
+opening_hours: ""
+website: "https://magasins.picard.fr/153-picard-brochant?utm_source=gmb"
