--- a/data/cities/poissy/les-deux-rives.yml
+++ b/data/cities/poissy/les-deux-rives.yml
@@ -6,6 +6,6 @@ postcode: "78300"
 city: Poissy
 street: "Rue de l'Église"
 housenumber: 1
-phone: "01 30 65 79 50"
+phone: "+33 1 30 65 79 50"
 opening_hours: ""
 website: ""
