--- a/data/cities/vigneux-sur-seine/auto-invest-91.yml
+++ b/data/cities/vigneux-sur-seine/auto-invest-91.yml
@@ -6,6 +6,6 @@ postcode: "91270"
 city: Vigneux-sur-Seine
 street: "Avenue  Henri Barbusse"
 housenumber: 3
-phone: "0763779292"
+phone: "+33 763779292"
 opening_hours: "Mo-Su 09:00-19:00"
 website: "https://www.auto-invest.fr/"
