--- a/data/cities/arcueil/latelier-de-valerie.yml
+++ b/data/cities/arcueil/latelier-de-valerie.yml
@@ -6,6 +6,6 @@ postcode: "94110"
 city: Arcueil
 street: "Avenue Laplace"
 housenumber: 31
-phone: ""
+phone: "+33142534858"
 opening_hours: "Tu-Sa 09:30-08:00"
-website: ""
+website: "https://latelier-coiffure-de-valerie.fr"
