--- a/data/cities/poissy/mbs.yml
+++ b/data/cities/poissy/mbs.yml
@@ -4,7 +4,7 @@ latitude: 48.93054
 longitude: 2.03941
 postcode: "78300"
 city: Poissy
-street: ""
+street: "Avenue du Cep"
 housenumber: 
 phone: ""
 opening_hours: ""
