--- a/data/cities/versailles/little-versaillee.yml
+++ b/data/cities/versailles/little-versaillee.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: "Rue du Vieux Versailles"
 housenumber: 26
 phone: ""
-opening_hours: "Tu-Th 10:00-18:00; Fr,Sa 10:00-17:00"
+opening_hours: ""
 website: ""
