update content and data

--- a/data/cities/paris/daf-autos.yml
+++ b/data/cities/paris/daf-autos.yml
@@ -6,6 +6,6 @@ postcode: "75009"
 city: Paris
 street: "Rue de Maubeuge"
 housenumber: 57
-phone: "+33 645775443"
+phone: "+33 650507805"
 opening_hours: "Mo-Sa 09:00-20:00"
-website: "https://www.is-cars.fr"
+website: "https://www.daf-autos.fr/"
