--- a/data/cities/paris/la-fee-qui-cloche.yml
+++ b/data/cities/paris/la-fee-qui-cloche.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue du Mont Cenis"
 housenumber: 88
 phone: "+33 1 42 23 09 35"
-opening_hours: "Tu-Sa 10:00-19:30; Su 10:00-13:00"
+opening_hours: "Su 10:00-13:00; Mo-Sa 10:00-19:30"
 website: "https://lafeequicloche.net"
