--- a/data/cities/versailles/nature-et-decouvertes.yml
+++ b/data/cities/versailles/nature-et-decouvertes.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: "Rue des Étangs Gobert"
 housenumber: 11
 phone: "+33 1 85 36 04 80"
-opening_hours: "Mo-Fr 09:30-19:30; Sa 10:00-19:30"
+opening_hours: "Tu-Sa 11:00-19:00"
 website: "https://www.natureetdecouvertes.com/magasins/yvelines/versailles"
