--- a/data/cities/roissy-en-france/chanel.yml
+++ b/data/cities/roissy-en-france/chanel.yml
@@ -1,11 +1,11 @@
 id: 6570051725
 type: node
-latitude: 49.00216
-longitude: 2.57849
+latitude: 49.00208
+longitude: 2.57742
 postcode: "95700"
 city: Roissy-en-France
 street: "Aéroport roissy Charles de Gaulle, terminal 2E"
 housenumber: 
 phone: ""
-opening_hours: ""
+opening_hours: "09:00-20:00"
 website: ""
