--- a/data/cities/versailles/le-chocolat-alain-ducasse.yml
+++ b/data/cities/versailles/le-chocolat-alain-ducasse.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: "Rue du Maréchal Foch"
 housenumber: 15
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Su 10:00-19:30"
 website: "https://www.lechocolat-alainducasse.com/en/"
