--- a/data/cities/versailles/little-versaillee.yml
+++ b/data/cities/versailles/little-versaillee.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: "Rue du Vieux Versailles"
 housenumber: 26
 phone: ""
-opening_hours: ""
+opening_hours: "Tu-Sa 09:00-18:00; Su 13:00-17:00"
 website: ""
