--- a/data/cities/versailles/revert.yml
+++ b/data/cities/versailles/revert.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: "Rue de la Paroisse"
 housenumber: 53
 phone: "+33 1 39072929"
-opening_hours: "Mo 09:30-12:45,14:15-19:00; Tu-Sa 09:00-19:00"
+opening_hours: "Mo 14:15-19:00, Tu-Sa 09:00-19:00,09:00-12:45, Mo 09:00-12:45"
 website: "https://www.revert-bricolage-outillage-78.fr/"
