--- a/data/cities/vert-saint-denis/citroen.yml
+++ b/data/cities/vert-saint-denis/citroen.yml
@@ -1,11 +1,11 @@
-id: 115140689
+id: 115143062
 type: way
-latitude: 48.56743
-longitude: 2.6301
+latitude: 48.56966
+longitude: 2.62513
 postcode: "77240"
 city: Vert-Saint-Denis
-street: "Rue de l'Épinet"
-housenumber: 240
+street: "Rue Aristide Briand"
+housenumber: 1
 phone: ""
 opening_hours: ""
 website: ""
