update content and data

--- a/data/cities/paris/nicolas-4.yml
+++ b/data/cities/paris/nicolas-4.yml
@@ -1,11 +1,11 @@
 id: 6461478788
 type: node
-latitude: 48.84792
-longitude: 2.26521
+latitude: 48.84794
+longitude: 2.26523
 postcode: ""
 city: Paris
 street: ""
 housenumber: 
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Fr 09:30-20:00; Sa 09:00-20:00; Su 09:30-13:00"
 website: ""
