--- a/data/cities/montrouge/rayon-vert.yml
+++ b/data/cities/montrouge/rayon-vert.yml
@@ -7,5 +7,5 @@ city: Montrouge
 street: "Avenue de la Marne"
 housenumber: 80
 phone: ""
-opening_hours: "Thus 09-15, Fri 16-19"
+opening_hours: "Th 09:00-15:00, Fr 16:00-19:00"
 website: "https://www.rayon-vert.org/"
