--- a/data/cities/paris/maison-chaudun.yml
+++ b/data/cities/paris/maison-chaudun.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue de l'Université"
 housenumber: 149
 phone: "+33 1 47 53 74 40"
-opening_hours: "Mo-Sa 10:00-19:00; Su 10:00-17:00"
+opening_hours: "Mo-Sa 10:00-19:00"
 website: "https://chaudun.com/"
