update content and data

--- a/data/cities/paris/saint-quentin-radio.yml
+++ b/data/cities/paris/saint-quentin-radio.yml
@@ -6,6 +6,6 @@ postcode: "75010"
 city: Paris
 street: "Rue de Saint-Quentin"
 housenumber: 6
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+33 1 40 37 70 74"
+opening_hours: "Sep-Jun Mo-Fr 09:30-13:00,13:30-18:20; Sep-Jun Sa 09:30-13:00,13:30-17:15; Jul-Aug Mo-Fr 09:30-12:30,14:00-18:20; PH off"
+website: "https://www.stquentin-radio.com/"
