--- a/data/cities/charenton-le-pont/le-pink-concept.yml
+++ b/data/cities/charenton-le-pont/le-pink-concept.yml
@@ -7,5 +7,5 @@ city: Charenton-le-Pont
 street: "Rue de Sully"
 housenumber: 1
 phone: "+33143760285"
-opening_hours: ""
+opening_hours: "Mo-Fr 09:30-18:30"
 website: "https://pinkconcept.fr"
