--- a/data/cities/gentilly/le-tourbillon-des-pains.yml
+++ b/data/cities/gentilly/le-tourbillon-des-pains.yml
@@ -1,11 +1,11 @@
 id: 10587851639
 type: node
-latitude: 48.81312
-longitude: 2.33418
+latitude: 48.81311
+longitude: 2.3342
 postcode: "94250"
 city: Gentilly
 street: "Avenue du Chaperon Vert"
-housenumber: 
+housenumber: 1
 phone: ""
 opening_hours: ""
 website: ""
