--- a/data/cities/paris/belle-parisienne.yml
+++ b/data/cities/paris/belle-parisienne.yml
@@ -6,6 +6,6 @@ postcode: "75016"
 city: Paris
 street: "Rue Nicolo"
 housenumber: 6
-phone: "+33 1 46 47 42 42"
-opening_hours: ""
+phone: ""
+opening_hours: "Mo,Sa 10:00-18:00; Tu-Fr 10:00-19:00; Su off"
 website: ""
