--- a/data/cities/paris/devred.yml
+++ b/data/cities/paris/devred.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue du Faubourg Saint-Antoine"
 housenumber: 43
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 10:00-19:30"
 website: ""
