--- a/data/cities/pierrelaye/la-maison-gourmande.yml
+++ b/data/cities/pierrelaye/la-maison-gourmande.yml
@@ -5,7 +5,7 @@ longitude: 2.15438
 postcode: "95480"
 city: Pierrelaye
 street: "Rue Léon Pelouse"
-housenumber: 
-phone: ""
-opening_hours: ""
+housenumber: 1
+phone: "+33 1 34 67 90 48"
+opening_hours: "Mo-Tu,Th-Sa 07:30-13:30,16:00-19:30; Su 07:30-13:30; We off"
 website: ""
