update content and data

--- a/data/cities/maurecourt/un-velo-qui-roule.yml
+++ b/data/cities/maurecourt/un-velo-qui-roule.yml
@@ -1,11 +1,11 @@
 id: 3438340896
 type: node
-latitude: 48.99654
-longitude: 2.06381
+latitude: 48.99673
+longitude: 2.06353
 postcode: "78780"
 city: Maurecourt
 street: "Rue Maurice Berteaux"
 housenumber: 2
 phone: ""
 opening_hours: "Sa 10:00-12:30"
-website: "unveloquiroule.fr"
+website: "www.unveloquiroule.fr"
