--- a/data/cities/le-perreux-sur-marne/il-etait-une-fleur.yml
+++ b/data/cities/le-perreux-sur-marne/il-etait-une-fleur.yml
@@ -7,5 +7,5 @@ city: Le Perreux-sur-Marne
 street: "Avenue du Général de Gaulle"
 housenumber: 96
 phone: "+33148710108"
-opening_hours: "Mo-Th 09:00-19:30, Fr-Sa 09:00-20:00; Su 09:00-14:00"
+opening_hours: "Tu-Su 09:00-14:00"
 website: ""
