--- a/data/cities/paris/serrurerie-2000-cordonnerie.yml
+++ b/data/cities/paris/serrurerie-2000-cordonnerie.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Avenue Jean Jaurès"
 housenumber: 15
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Fr 09:00-12:00,14:00-18:30; Sa 09:00-12:00"
 website: ""
