update content and data

--- a/data/cities/paris/naturalia-boulevard-voltaire.yml
+++ b/data/cities/paris/naturalia-boulevard-voltaire.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Boulevard Voltaire"
 housenumber: 196
 phone: ""
-opening_hours: "Mo-Sa 09:00-20:45"
+opening_hours: "Mo-Sa 09:00-20:45; Su 09:00-12:45"
 website: "https://naturalia.fr/"
