--- a/data/cities/bagnolet/la-sardine-bleue.yml
+++ b/data/cities/bagnolet/la-sardine-bleue.yml
@@ -7,5 +7,5 @@ city: Bagnolet
 street: "Rue Angela Davis"
 housenumber: 
 phone: ""
-opening_hours: ""
+opening_hours: "Sa 14:00-18:00 open Sous réserve de disponibilité des bénévoles"
 website: "http://lasardinebleue.org"
