--- a/data/cities/paris/archibald.yml
+++ b/data/cities/paris/archibald.yml
@@ -6,6 +6,6 @@ postcode: "75015"
 city: Paris
 street: "Rue Pétel"
 housenumber: 2
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+33 9 87 19 42 41"
+opening_hours: "Tu-Fr 11:00-19:00, Sa 10:00-19:00"
+website: "https://archibald.bio/"
