update content and data

--- a/data/cities/cachan/alimentation-generale.yml
+++ b/data/cities/cachan/alimentation-generale.yml
@@ -7,5 +7,5 @@ city: Cachan
 street: ""
 housenumber: 
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Su 09:00-23:00"
 website: "https://www.ville-cachan.fr/component/fabrik/details/6/24"
