--- a/data/cities/fontenay-aux-roses/aldi.yml
+++ b/data/cities/fontenay-aux-roses/aldi.yml
@@ -6,6 +6,6 @@ postcode: "92260"
 city: Fontenay-aux-Roses
 street: "Rue Marx Dormoy"
 housenumber: 52
-phone: "+33.1 41 13 78 29"
+phone: "+33 1 81 09 78 25"
 opening_hours: ""
-website: "https://www.leaderprice.fr"
+website: "https://www.aldi.fr/magasins-et-horaires-d-ouverture.html/l/fontenay-aux-roses/52-rue-marx-dormoy/3435914"
