--- a/data/cities/herblay-sur-seine/cuir-center.yml
+++ b/data/cities/herblay-sur-seine/cuir-center.yml
@@ -7,5 +7,5 @@ city: Herblay-sur-Seine
 street: "Boulevard du Havre"
 housenumber: 22
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Fr 10:00-12:00,14:00-19:00; Sa,Su 10:00-19:30"
 website: ""
