--- a/data/cities/herblay-sur-seine/monsieur-meuble.yml
+++ b/data/cities/herblay-sur-seine/monsieur-meuble.yml
@@ -7,5 +7,5 @@ city: Herblay-sur-Seine
 street: "Boulevard du Havre"
 housenumber: 16
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Su 10:00-19:00"
 website: ""
