--- a/data/cities/herblay-sur-seine/schmidt.yml
+++ b/data/cities/herblay-sur-seine/schmidt.yml
@@ -7,5 +7,5 @@ city: Herblay-sur-Seine
 street: "Boulevard du Havre"
 housenumber: 18
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Su 10:00-19:00"
 website: "https://www.home-design.schmidt/fr-fr/magasin-schmidt/0003000837-paris-herblay"
