--- a/data/cities/noisy-le-grand/suzanne-et-lucien.yml
+++ b/data/cities/noisy-le-grand/suzanne-et-lucien.yml
@@ -6,6 +6,6 @@ postcode: "93160"
 city: Noisy-le-Grand
 street: "Avenue Emile Cossoneau"
 housenumber: 28
-phone: ""
+phone: "+33148151348"
 opening_hours: ""
 website: ""
