--- a/data/cities/corbeil-essonnes/intermarche-super.yml
+++ b/data/cities/corbeil-essonnes/intermarche-super.yml
@@ -7,5 +7,5 @@ city: Corbeil-Essonnes
 street: "Boulevard Georges Michel"
 housenumber: 24
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Th 08:30-20:15,Fr-Sa 08:30-20:45,Su 09:00-12:30"
 website: ""
