--- a/data/cities/montigny-les-cormeilles/roche-bobois.yml
+++ b/data/cities/montigny-les-cormeilles/roche-bobois.yml
@@ -7,5 +7,5 @@ city: Montigny-lès-Cormeilles
 street: "Boulevard Victor Bordier"
 housenumber: 17;21
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Fr 10:00-12:30,14:00-19:30; Sa 10:00-19:30; Su 10:30-12:30,14:30-19:30"
 website: ""
