--- a/data/cities/paris/franck-provost-rue-de-louest.yml
+++ b/data/cities/paris/franck-provost-rue-de-louest.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue de l'Ouest"
 housenumber: 6
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Th 10:00-19:00, Fr 10:00-20:00, Sa 09:00-19:00"
 website: ""
