--- a/data/cities/paris/yf-beaute.yml
+++ b/data/cities/paris/yf-beaute.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue de l'Ouest"
 housenumber: 10
 phone: ""
-opening_hours: "Mo-Su 10:00-20:00"
+opening_hours: "10:00-22:00"
 website: ""
