--- a/data/cities/paris/yf-nails.yml
+++ b/data/cities/paris/yf-nails.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue de l'Ouest"
 housenumber: 10
 phone: ""
-opening_hours: "Mo-Su 10:00-20:00"
+opening_hours: "We-Mo 10:00-20:00"
 website: ""
