--- a/data/cities/saint-germain-en-laye/edgard.yml
+++ b/data/cities/saint-germain-en-laye/edgard.yml
@@ -1,11 +1,11 @@
-id: 1904279142
+id: 1898757030
 type: node
-latitude: 48.89661
-longitude: 2.09215
+latitude: 48.89653
+longitude: 2.09107
 postcode: "78100"
 city: Saint-Germain-en-Laye
-street: "Rue au Pain"
-housenumber: 15
+street: "Rue du Vieux Marché"
+housenumber: 23
 phone: ""
 opening_hours: ""
 website: ""
