update content and data

--- a/data/cities/bagneux/librairie-le-bazar-utopique.yml
+++ b/data/cities/bagneux/librairie-le-bazar-utopique.yml
@@ -1,11 +1,11 @@
 id: 10042265468
 type: node
-latitude: 48.79571
-longitude: 2.30177
+latitude: 48.79585
+longitude: 2.30203
 postcode: "92220"
 city: Bagneux
 street: "Rue de la République"
 housenumber: 3
 phone: "+33 1 49 65 01 20"
-opening_hours: ""
+opening_hours: "Tu-Fr 10:00-19:00; Sa 09:00-19:00"
 website: "http://librairielebazarutopique.fr/"
