--- a/data/cities/juvisy-sur-orge/le-jour-j.yml
+++ b/data/cities/juvisy-sur-orge/le-jour-j.yml
@@ -6,6 +6,6 @@ postcode: "91260"
 city: Juvisy-sur-Orge
 street: "Avenue de la République"
 housenumber: 3
-phone: "+33178845192"
+phone: "+33 1 78 84 51 92"
 opening_hours: ""
 website: ""
