--- a/data/cities/paris/rue-juliette.yml
+++ b/data/cities/paris/rue-juliette.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue Trolley de Prévaux"
 housenumber: 1
 phone: "+33 9 72 32 38 75"
-opening_hours: "Tu-Fr 10:00-19:30, Sa 09:30-19:30, Su 09:30-13:30"
+opening_hours: "Mo-Fr 10:00-19:30, Sa 09:30-19:30, Su 09:30-13:30"
 website: "https://ruejuliette.com/"
