--- a/data/cities/savigny-le-temple/maxxilot.yml
+++ b/data/cities/savigny-le-temple/maxxilot.yml
@@ -7,5 +7,5 @@ city: Savigny-le-Temple
 street: "allée du Cobalt"
 housenumber: 24
 phone: ""
-opening_hours: "Mo-Sa 10:00-19:00"
+opening_hours: "Tu-Sa 09:30-19:00; Su 13:00-18:00"
 website: "https://www.maxxilot.info/"
