--- a/data/cities/bagneux/croix-rouge-francaise-vestiboutique.yml
+++ b/data/cities/bagneux/croix-rouge-francaise-vestiboutique.yml
@@ -7,5 +7,5 @@ city: Bagneux
 street: "Allée Maurice Langlet"
 housenumber: 10
 phone: ""
-opening_hours: ""
+opening_hours: "We 17:00-19:00; Sa 10:00-18:00"
 website: ""
