--- a/data/cities/juvisy-sur-orge/primeur-de-la-republique.yml
+++ b/data/cities/juvisy-sur-orge/primeur-de-la-republique.yml
@@ -6,6 +6,6 @@ postcode: "91260"
 city: Juvisy-sur-Orge
 street: "Avenue de la République"
 housenumber: 3
-phone: "+33650359388"
+phone: "+33 6 50 35 93 88"
 opening_hours: ""
 website: ""
