--- a/data/cities/montreuil/pribon.yml
+++ b/data/cities/montreuil/pribon.yml
@@ -4,8 +4,8 @@ latitude: 48.85599
 longitude: 2.42989
 postcode: "93100"
 city: Montreuil
-street: "Rue Douy Délcupe"
+street: "Rue Douy Delcupe"
 housenumber: 70
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+33 1 83 74 79 16"
+opening_hours: "Mo-Sa 09:00-20:00; Su 09:00-13:00"
+website: "https://www.pribon.org/"
