--- a/data/cities/paris/franprix-rue-la-condamine.yml
+++ b/data/cities/paris/franprix-rue-la-condamine.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue la Condamine"
 housenumber: 24-26
 phone: ""
-opening_hours: "Mo-Sa 07:30-21:00, Su 09:00-21:00"
+opening_hours: "Mo-Sa 07:30-22:00; Su 09:00-22:00"
 website: ""
