--- a/data/cities/trilport/jardineries-dici.yml
+++ b/data/cities/trilport/jardineries-dici.yml
@@ -5,7 +5,7 @@ longitude: 2.9603
 postcode: "77470"
 city: Trilport
 street: "Avenue de Verdun"
-housenumber: 86
+housenumber: 86bis
 phone: "+33160618514"
 opening_hours: "Mo-Sa 09:30-19:00; Su 09:30-18:00"
 website: ""
