update content and data

--- a/data/cities/vaudherland/mathieu-meca.yml
+++ b/data/cities/vaudherland/mathieu-meca.yml
@@ -4,8 +4,8 @@ latitude: 49.00086
 longitude: 2.48902
 postcode: "95500"
 city: Vaudherland
-street: ""
+street: "Chemin de Roissy"
 housenumber: 5
-phone: ""
+phone: "+33 1 39 88 77 40"
 opening_hours: ""
-website: ""
+website: "https://www.ad.fr/garage/garage-ad-expert-mathieu-meca"
