--- a/data/cities/versailles/phone-tel.yml
+++ b/data/cities/versailles/phone-tel.yml
@@ -6,6 +6,6 @@ postcode: "78000"
 city: Versailles
 street: "Rue des Chantiers"
 housenumber: 14
-phone: ""
-opening_hours: ""
+phone: "0652206830"
+opening_hours: "Mo-Fr 10:00-17:00"
 website: ""
