--- a/data/cities/versailles/la-porte-a-cote.yml
+++ b/data/cities/versailles/la-porte-a-cote.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: "Rue Pierre Curie"
 housenumber: 1
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Fr 09:30-12:00,13:30-17:00; Sa 09:30-13:00"
 website: ""
