update content and data

--- a/data/cities/le-vesinet/raisin-vert.yml
+++ b/data/cities/le-vesinet/raisin-vert.yml
@@ -1,11 +1,11 @@
-id: 2196126270
+id: 2196098024
 type: node
-latitude: 48.89261
-longitude: 2.13305
+latitude: 48.89204
+longitude: 2.13367
 postcode: "78110"
 city: Le Vésinet
-street: "Rue Thiers"
-housenumber: 2
+street: "Place de l'Église"
+housenumber: 7
 phone: ""
 opening_hours: ""
 website: ""
