--- a/data/cities/poissy/boulangerie-au-soleil.yml
+++ b/data/cities/poissy/boulangerie-au-soleil.yml
@@ -6,6 +6,6 @@ postcode: "78300"
 city: Poissy
 street: "Avenue des Ursulines"
 housenumber: 8
-phone: ""
+phone: "+33 1 39 65 06 09"
 opening_hours: "We-Su 05:30-20:00; Mo,Tu off"
 website: ""
