--- a/data/cities/poissy/mundoya.yml
+++ b/data/cities/poissy/mundoya.yml
@@ -6,6 +6,6 @@ postcode: "78300"
 city: Poissy
 street: "Rue au Pain"
 housenumber: 12
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+33 1 30 65 84 40"
+opening_hours: "Mo-Fr 09:30-20:00; Sa 09:00-19:00"
+website: "https://www.mundoya.fr/"
