--- a/data/cities/cormeilles-en-parisis/arthur-bonnet.yml
+++ b/data/cities/cormeilles-en-parisis/arthur-bonnet.yml
@@ -7,5 +7,5 @@ city: Cormeilles-en-Parisis
 street: "Rue de Sartrouville"
 housenumber: 
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Fr 09:30-12:00,14:30-18:30; Sa 09:30-12:00,14:30-18:00"
 website: ""
