--- a/data/cities/cormeilles-en-parisis/pressing-eco-village.yml
+++ b/data/cities/cormeilles-en-parisis/pressing-eco-village.yml
@@ -7,5 +7,5 @@ city: Cormeilles-en-Parisis
 street: "Rue Gabriel Péri"
 housenumber: 50
 phone: "+33 1 30 26 10 53"
-opening_hours: ""
+opening_hours: "Tu-Sa 09:00-12:00,14:00-19:30"
 website: ""
