--- a/data/cities/paris/pain-pain-rue-des-martyrs.yml
+++ b/data/cities/paris/pain-pain-rue-des-martyrs.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue des Martyrs"
 housenumber: 88
 phone: ""
-opening_hours: "Mo-Sa 07:00-20:00; Mo off; Su 07:30-19:30"
+opening_hours: "Mo off; Su 07:30-19:30; Mo-Sa 07:00-20:30"
 website: ""
