--- a/data/cities/paris/saint-denis-primeurs.yml
+++ b/data/cities/paris/saint-denis-primeurs.yml
@@ -7,5 +7,5 @@ city: Paris
 street: ""
 housenumber: 
 phone: ""
-opening_hours: ""
+opening_hours: "Tu-Sa 09:00-19:45; Su 09:00-13:30"
 website: ""
