--- a/data/cities/poissy/casino.yml
+++ b/data/cities/poissy/casino.yml
@@ -6,6 +6,6 @@ postcode: "78300"
 city: Poissy
 street: "Avenue du Cep"
 housenumber: 28
-phone: ""
-opening_hours: ""
+phone: "+33171521964"
+opening_hours: "Mo-Sa 08:00-20:30; Su 08:30-13:00"
 website: ""
