--- a/data/cities/poissy/coup-de-coeur-en-cuisine.yml
+++ b/data/cities/poissy/coup-de-coeur-en-cuisine.yml
@@ -7,5 +7,5 @@ city: Poissy
 street: "Avenue du Cep"
 housenumber: 20
 phone: "+33139080539"
-opening_hours: ""
+opening_hours: "Tu-Fr 10:00-13:30,15:00-19:30; Sa 10:00-19:30; Su 10:00-13:30"
 website: "https://coupdecoeurencuisine.com/"
