--- a/data/cities/poissy/epices-du-monde.yml
+++ b/data/cities/poissy/epices-du-monde.yml
@@ -6,6 +6,6 @@ postcode: "78300"
 city: Poissy
 street: "Avenue Maurice-Berteaux"
 housenumber: 4
-phone: "+33134014086"
-opening_hours: ""
-website: ""
+phone: "+33970352491"
+opening_hours: "Tu-Sa 09:00-21:00; Su 09:00-20:00"
+website: "https://www.epicesdumondepoissy.fr/"
