--- a/data/cities/poissy/everart.yml
+++ b/data/cities/poissy/everart.yml
@@ -7,5 +7,5 @@ city: Poissy
 street: "Boulevard Devaux"
 housenumber: 4
 phone: "+33 1 39 65 09 88"
-opening_hours: ""
-website: ""
+opening_hours: "Tu-Sa 10:00-12:00,14:00-18:00"
+website: "https://everart.fr/"
