--- a/data/cities/poissy/le-jardin-de-celia.yml
+++ b/data/cities/poissy/le-jardin-de-celia.yml
@@ -7,5 +7,5 @@ city: Poissy
 street: "Avenue des Ursulines"
 housenumber: 5
 phone: "+33 1 30 65 43 25"
-opening_hours: ""
+opening_hours: "Tu-Th 08:30-19:30; Fr-Sa 08:30-20:00; Su 09:00-13:30"
 website: ""
