--- a/data/cities/poissy/lechoppe-de-biere.yml
+++ b/data/cities/poissy/lechoppe-de-biere.yml
@@ -6,6 +6,6 @@ postcode: "78300"
 city: Poissy
 street: "Rue du Général de Gaulle"
 housenumber: 114
-phone: ""
-opening_hours: ""
+phone: "+33 9 83 48 11 30"
+opening_hours: "Tu-We 10:30-13:00,16:00-20:00; Th 10:30-13:00,16:00-21:00; Fr 10:30-13:00,16:00-22:00; Sa 10:300-13:00,15:30-20:00"
 website: ""
