--- a/data/cities/poissy/les-vergers-de-saint-louis.yml
+++ b/data/cities/poissy/les-vergers-de-saint-louis.yml
@@ -5,7 +5,7 @@ longitude: 2.04056
 postcode: "78300"
 city: Poissy
 street: "Avenue du Cep"
-housenumber: 
-phone: ""
+housenumber: 13
+phone: "+33 1 39 79 15 87"
 opening_hours: ""
 website: ""
