--- a/data/cities/poissy/librairie-du-pincerais.yml
+++ b/data/cities/poissy/librairie-du-pincerais.yml
@@ -8,4 +8,4 @@ street: "Rue du Général de Gaulle"
 housenumber: 117
 phone: "+33130743026"
 opening_hours: "Tu-Sa 10:00-19:00, Su,Mo 10:00-13:00, Mo 14:00-19:00"
-website: ""
+website: "https://librairiedupincerais.fr/"
