--- a/data/cities/poissy/mbs.yml
+++ b/data/cities/poissy/mbs.yml
@@ -5,7 +5,7 @@ longitude: 2.03941
 postcode: "78300"
 city: Poissy
 street: "Avenue du Cep"
-housenumber: 
+housenumber: 3 bis
 phone: ""
 opening_hours: ""
 website: ""
