--- a/data/cities/poissy/mr-bricolage.yml
+++ b/data/cities/poissy/mr-bricolage.yml
@@ -6,6 +6,6 @@ postcode: "78300"
 city: Poissy
 street: "Avenue des Ursulines"
 housenumber: 5
-phone: ""
-opening_hours: ""
+phone: "+33139707090"
+opening_hours: "Mo-Sa 09:00-19:00; Su 09:00-13:00"
 website: ""
