--- a/data/cities/poissy/tofopolis.yml
+++ b/data/cities/poissy/tofopolis.yml
@@ -7,5 +7,5 @@ city: Poissy
 street: "Rue aux Moutons"
 housenumber: 1
 phone: "+33987172075"
-opening_hours: ""
+opening_hours: "Tu-Sa 10:00-13:00,15:00-19:00; Su 10:00-13:00"
 website: "https://www.tofopolis.com/"
