--- a/data/cities/poissy/veleos.yml
+++ b/data/cities/poissy/veleos.yml
@@ -7,5 +7,5 @@ city: Poissy
 street: "Avenue du Cep"
 housenumber: 20
 phone: "+33 1 30 74 64 38"
-opening_hours: ""
+opening_hours: "Tu-Sa 10:00-19:00; Su 10:00-13:00"
 website: "https://www.veleos.fr/"
