--- a/data/cities/paris/sex-shop-boulevard-de-clichy.yml
+++ b/data/cities/paris/sex-shop-boulevard-de-clichy.yml
@@ -1,11 +1,11 @@
-id: 5932396759
+id: 5929858533
 type: node
-latitude: 48.88298
-longitude: 2.33452
+latitude: 48.88271
+longitude: 2.33546
 postcode: "75009"
 city: Paris
 street: "Boulevard de Clichy"
-housenumber: 41
+housenumber: 33 bis
 phone: ""
 opening_hours: ""
 website: ""
