update content and data

--- a/data/cities/fresnes/animalis.yml
+++ b/data/cities/fresnes/animalis.yml
@@ -5,7 +5,7 @@ longitude: 2.32979
 postcode: "94260"
 city: Fresnes
 street: "Allée des Jachères"
-housenumber: 4,6
+housenumber: 2
 phone: ""
 opening_hours: "Mo-Su 10:00-19:00"
-website: "https://www.besson-chaussures.com/fr/BESSON_CHAUSSURES_Magasin_FRESNES-p28067"
+website: "https://magasin.animalis.com/251650-animalis-fresnes"
