--- a/data/cities/paris/lunettes-pour-tous.yml
+++ b/data/cities/paris/lunettes-pour-tous.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue de Turbigo"
 housenumber: 
 phone: "+33 9 72 57 98 00"
-opening_hours: "Mo-Sa 10:00-20:00"
-website: "https://lunettespourtous.com"
+opening_hours: "Mo-Sa 10:00-20:30, Su 11:00-19:00"
+website: "https://lunettespourtous.com/pages/nos-magasins?store=paris-ch%C3%A2telet"
