--- a/data/cities/massy/auchan-supermarche.yml
+++ b/data/cities/massy/auchan-supermarche.yml
@@ -5,7 +5,7 @@ longitude: 2.25669
 postcode: "91300"
 city: Massy
 street: "Place de l'Union Européenne"
-housenumber: 
+housenumber: 23-25
 phone: ""
 opening_hours: "Mo-Sa 08:30-21:00; Su 08:30-12:30"
 website: "https://www.auchan.fr/magasins/supermarche-massy/sl-1333"
