--- a/data/cities/versailles/boulangerie-delangle.yml
+++ b/data/cities/versailles/boulangerie-delangle.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: "Rue Coste"
 housenumber: 24
 phone: ""
-opening_hours: "Su 07:00-13:45; Tu-Sa 06:45-19:45"
+opening_hours: "Tu-Sa 06:45-19:45"
 website: ""
