update content and data

--- a/data/cities/colombes/saga-des-marques.yml
+++ b/data/cities/colombes/saga-des-marques.yml
@@ -8,4 +8,4 @@ street: "Rue du bournard"
 housenumber: 81
 phone: ""
 opening_hours: "Mo-Su 10:00-19:15"
-website: ""
+website: "https://saga-des-marques.fr"
