--- a/data/cities/montreuil/le-comptoir-bike-shop.yml
+++ b/data/cities/montreuil/le-comptoir-bike-shop.yml
@@ -7,5 +7,5 @@ city: Montreuil
 street: "Rue de la République"
 housenumber: 12
 phone: "+33.9.51.10.50.57"
-opening_hours: ""
+opening_hours: "Tu-Fr 10:00-12:00,13:00-19:00; Sa 11:00-19:00"
 website: "https://lecomptoirbikeshop.com/"
