--- a/data/cities/montreuil/le-batard-cycles-leger.yml
+++ b/data/cities/montreuil/le-batard-cycles-leger.yml
@@ -7,5 +7,5 @@ city: Montreuil
 street: "Rue Danton"
 housenumber: 15
 phone: "+33.1 42 87 99 65"
-opening_hours: ""
+opening_hours: "Tu-Th 08:00-17:00"
 website: "https://www.lebatard.com/"
