--- a/data/cities/paris/gyroroue-shop.yml
+++ b/data/cities/paris/gyroroue-shop.yml
@@ -6,6 +6,6 @@ postcode: "75011"
 city: Paris
 street: "Boulevard Voltaire"
 housenumber: 101
-phone: "+33980486209‬"
+phone: "+33 9 80 48 62 09‬"
 opening_hours: ""
 website: "https://gyroroue-shop.fr"
