--- a/data/cities/paris/h2copy-vaneau.yml
+++ b/data/cities/paris/h2copy-vaneau.yml
@@ -6,6 +6,6 @@ postcode: "75006"
 city: Paris
 street: "Rue de Sèvres"
 housenumber: 103
-phone: "01 45 49 40 60"
+phone: "+33 1 45 49 40 60"
 opening_hours: "Mo-Su 09:30-11:30 16:30-18:30"
 website: ""
