--- a/data/cities/paris/sex-shop.yml
+++ b/data/cities/paris/sex-shop.yml
@@ -1,11 +1,11 @@
-id: 5932494585
+id: 5929858533
 type: node
-latitude: 48.88325
-longitude: 2.33519
-postcode: "75018"
+latitude: 48.88271
+longitude: 2.33546
+postcode: "75009"
 city: Paris
 street: "Boulevard de Clichy"
-housenumber: 52
+housenumber: 33 bis
 phone: ""
 opening_hours: ""
 website: ""
