--- a/data/cities/versailles/komilfo-novatis.yml
+++ b/data/cities/versailles/komilfo-novatis.yml
@@ -6,6 +6,6 @@ postcode: "78000"
 city: Versailles
 street: "Rue Coste"
 housenumber: 17
-phone: ""
-opening_hours: "Mo-Fr 09:00-12:30,13:30-18:30"
+phone: "0180844425"
+opening_hours: "We, Sa 10:00-13:00, 14:00-17:00"
 website: ""
