--- a/data/cities/vincennes/autour-du-the.yml
+++ b/data/cities/vincennes/autour-du-the.yml
@@ -6,6 +6,6 @@ postcode: "94300"
 city: Vincennes
 street: "Rue Saulpic"
 housenumber: 9
-phone: ""
+phone: "+33 1 48 08 05 37"
 opening_hours: "Tu-Sa 10:00-13:30,14:30-19:00"
 website: ""
