update content and data

--- a/data/cities/plaisir/decathlon.yml
+++ b/data/cities/plaisir/decathlon.yml
@@ -6,6 +6,6 @@ postcode: "78370"
 city: Plaisir
 street: "Rue Henri Barbusse"
 housenumber: 70
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+33130075250"
+opening_hours: "Mo-Sa 09:30-20:00; Su 10:00-19:30"
+website: "https://www.decathlon.fr/store-view/magasin-de-sports-plaisir-0070005500055"
