update content and data

--- a/data/cities/ivry-sur-seine/le-velandais.yml
+++ b/data/cities/ivry-sur-seine/le-velandais.yml
@@ -6,6 +6,6 @@ postcode: "94200"
 city: Ivry-sur-Seine
 street: "Boulevard Paul Vaillant-Couturier"
 housenumber: 56
-phone: "+33 9 85 13 12 71"
-opening_hours: ""
+phone: "+33 9 83 01 21 04"
+opening_hours: "Mo-Sat 10:00-20:00"
 website: "https://www.levelandais.com/"
