--- a/data/cities/paris/le-velandais.yml
+++ b/data/cities/paris/le-velandais.yml
@@ -4,8 +4,8 @@ latitude: 48.86542
 longitude: 2.37277
 postcode: "75011"
 city: Paris
-street: ""
-housenumber: 
-phone: ""
-opening_hours: ""
+street: "Avenue de la République"
+housenumber: 38bis
+phone: "+33 7 62 02 59 27"
+opening_hours: "Mo-Sa 10:00-20:00"
 website: "https://www.levelandais.com/"
