update content and data

--- a/data/cities/la-courneuve/aldi.yml
+++ b/data/cities/la-courneuve/aldi.yml
@@ -6,6 +6,6 @@ postcode: "93120"
 city: La Courneuve
 street: "Rue de Saint-Denis"
 housenumber: 
-phone: ""
+phone: "+33 1 81 09 78 25"
 opening_hours: ""
-website: ""
+website: "https://www.aldi.fr/magasins-et-horaires-d-ouverture.html/l/la-courneuve/1-15-rue-de-saint-denis/3435516"
