--- a/data/cities/le-plessis-trevise/le-comptoir-de-maloe.yml
+++ b/data/cities/le-plessis-trevise/le-comptoir-de-maloe.yml
@@ -1,11 +1,11 @@
 id: 8230280037
 type: node
-latitude: 48.80939
-longitude: 2.57458
+latitude: 48.81025
+longitude: 2.57265
 postcode: "94420"
 city: Le Plessis-Trévise
-street: "Avenue Thérèse"
-housenumber: 5
+street: "Avenue Ardouin"
+housenumber: 7 bis
 phone: ""
 opening_hours: ""
 website: ""
