--- a/data/cities/paris/faguo.yml
+++ b/data/cities/paris/faguo.yml
@@ -8,4 +8,4 @@ street: "Rue des Abbesses"
 housenumber: 22
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.faguo-store.com/fr/boutique/409-abbesses-faguo"
