--- a/data/cities/rueil-malmaison/miranda-alimentation-generale.yml
+++ b/data/cities/rueil-malmaison/miranda-alimentation-generale.yml
@@ -7,5 +7,5 @@ city: Rueil-Malmaison
 street: "Rue des Frères Lumière"
 housenumber: 22
 phone: ""
-opening_hours: ""
+opening_hours: "Tu-Fr 08:00-21:30; Sa,Su 08:30-21:30"
 website: ""
