--- a/data/cities/provins/bricomarche.yml
+++ b/data/cities/provins/bricomarche.yml
@@ -1,7 +1,7 @@
-id: 10688307639
-type: node
-latitude: 48.55968
-longitude: 3.31076
+id: 113127147
+type: way
+latitude: 48.5596
+longitude: 3.3111
 postcode: "77160"
 city: Provins
 street: "Avenue du Maréchal de Lattre de Tassigny"
