update content and data

--- a/data/cities/montrouge/naturalia.yml
+++ b/data/cities/montrouge/naturalia.yml
@@ -7,5 +7,5 @@ city: Montrouge
 street: "Rue Théophile Gautier"
 housenumber: 5
 phone: "+33 1 49 85 00 07"
-opening_hours: ""
+opening_hours: "Mo-Sa 09:00-20:00; Su 09:00-12:45"
 website: "https://magasins.naturalia.fr/naturalia/fr/store/france/ile-de-france/hauts-de-seine/montrouge/montrouge/4963"
