--- a/data/cities/paris/monoprix.yml
+++ b/data/cities/paris/monoprix.yml
@@ -1,11 +1,11 @@
-id: 373744329
+id: 260016094
 type: node
-latitude: 48.82911
-longitude: 2.32355
-postcode: "75014"
+latitude: 48.84358
+longitude: 2.30526
+postcode: "75015"
 city: Paris
-street: "Rue d'Alésia"
-housenumber: 92
-phone: "+33 1 58 14 22 90"
-opening_hours: "Mo-Sa 08:00-22:00; Su 08:00-20:00"
-website: "https://www.monoprix.fr/monoprix-moulin-vert-pn-paris-75014-s"
+street: "Rue Lecourbe"
+housenumber: 76
+phone: "+33 1 42 73 03 30"
+opening_hours: "09:00-21:45; Su 09:00-20:00"
+website: "https://www.monoprix.fr/trouver-mon-magasin/monoprix-lecourbe-paris-1318.html"
