--- a/data/cities/chanteloup-les-vignes/boulangerie-de-la-mairie.yml
+++ b/data/cities/chanteloup-les-vignes/boulangerie-de-la-mairie.yml
@@ -1,11 +1,11 @@
-id: 5839611752
+id: 11688492067
 type: node
-latitude: 48.97898
-longitude: 2.03058
+latitude: 48.9784
+longitude: 2.03079
 postcode: "78570"
 city: Chanteloup-les-Vignes
 street: "Rue du Général Leclerc"
-housenumber: 56
+housenumber: 36
 phone: ""
-opening_hours: "Tu-Sa 09:00-19:30"
+opening_hours: ""
 website: ""
