--- a/data/cities/pantin/anbassa.yml
+++ b/data/cities/pantin/anbassa.yml
@@ -7,5 +7,5 @@ city: Pantin
 street: "Rue Hoche"
 housenumber: 57 bis
 phone: ""
-opening_hours: ""
+opening_hours: "Tu-Sa 09:00-19:30; Su 09:00-13:00"
 website: "https://anbassa.fr/"
