--- a/data/cities/paris/monoprix-rue-dalesia.yml
+++ b/data/cities/paris/monoprix-rue-dalesia.yml
@@ -1,11 +1,11 @@
-id: 2624452980
+id: 373744329
 type: node
-latitude: 48.8294
-longitude: 2.32206
+latitude: 48.82911
+longitude: 2.32355
 postcode: "75014"
 city: Paris
 street: "Rue d'Alésia"
-housenumber: 129-135
-phone: "+33 1 45 43 04 36"
+housenumber: 92
+phone: "+33 1 58 14 22 90"
 opening_hours: "Mo-Sa 08:00-22:00; Su 08:00-20:00"
-website: "https://www.monoprix.fr/monoprix-alesia-paris-75014-s/"
+website: "https://www.monoprix.fr/monoprix-moulin-vert-pn-paris-75014-s"
