update content and data

--- a/data/cities/paris/bobby.yml
+++ b/data/cities/paris/bobby.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue Réaumur"
 housenumber: 89
 phone: ""
-opening_hours: ""
-website: ""
+opening_hours: "Mo-Sa 11:00-19:30"
+website: "https://www.bobbyparis.com/"
