--- a/data/cities/paris/cookidiction-rue-poncelet.yml
+++ b/data/cities/paris/cookidiction-rue-poncelet.yml
@@ -8,4 +8,4 @@ street: "Rue Poncelet"
 housenumber: 36
 phone: ""
 opening_hours: ""
-website: "http://www.cookidiction.com/"
+website: "https://www.cookidiction.com/"
