--- a/data/cities/paris/galerie-vivienne.yml
+++ b/data/cities/paris/galerie-vivienne.yml
@@ -8,4 +8,4 @@ street: "Galerie Vivienne"
 housenumber: 
 phone: ""
 opening_hours: "Mo-Sa 08:30-20:30"
-website: "http://www.galerie-vivienne.com"
+website: "https://www.galerie-vivienne.com/"
