--- a/data/cities/paris/la-terrasse.yml
+++ b/data/cities/paris/la-terrasse.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Boulevard Saint-Michel"
 housenumber: 145
 phone: ""
-opening_hours: "Mo 11:30-23:59; Tu 00:00-01:30, 09:00-23:59; We-Sa 00:00-02:00, 09:00-23:59; Su 00:00-02:00, 11:00-23:59"
+opening_hours: "Mo 00:00-00:30, 14:00-23:59; Tu 00:00-01:00, 14:00-23:59; We-Sa 00:00-02:00, 14:00-23:59; Su 00:00-02:00, 15:00-23:59"
 website: ""
