--- a/data/cities/velizy-villacoublay/intersport.yml
+++ b/data/cities/velizy-villacoublay/intersport.yml
@@ -8,4 +8,4 @@ street: "Avenue de l'Europe"
 housenumber: 2
 phone: ""
 opening_hours: "Mo-Sa 10:00-21:00; Su 10:00-19:00"
-website: "https://stores.go-sport.com/fr-fr/magasin-sport/velizy-villacoublay/go-sport-velizy/1051"
+website: "https://www.intersport.fr/Yvelines-78/VELIZY-78140/INTERSPORT-VELIZY/04936_000/#https://www.intersport.fr/departement/paris-75/"
