--- a/data/cities/noiseau/au-pont-des-arts.yml
+++ b/data/cities/noiseau/au-pont-des-arts.yml
@@ -8,4 +8,4 @@ street: "Rue Pierre Currie"
 housenumber: 44
 phone: ""
 opening_hours: "Tu-Sa 10:30-19:00"
-website: "http://aupontdesarts.net/"
+website: "https://aupontdesarts.net/"
