--- a/data/cities/paris/baetsh-rue-des-abbesses.yml
+++ b/data/cities/paris/baetsh-rue-des-abbesses.yml
@@ -6,6 +6,6 @@ postcode: "75018"
 city: Paris
 street: "Rue des Abbesses"
 housenumber: 1 bis
-phone: ""
-opening_hours: ""
+phone: "+33 1 46 06 20 46"
+opening_hours: "Mo-Su 10h30-19h30"
 website: ""
