--- a/data/cities/paris/devinez.yml
+++ b/data/cities/paris/devinez.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue Legendre"
 housenumber: 183
 phone: ""
-opening_hours: ""
+opening_hours: "Tu-Fr 10:30-14:00,15:30-20:30; Mo 16:30-20:30; Sa 10:30-20:30"
 website: ""
