--- a/data/cities/paris/franprix-rue-la-condamine.yml
+++ b/data/cities/paris/franprix-rue-la-condamine.yml
@@ -8,4 +8,4 @@ street: "Rue la Condamine"
 housenumber: 24-26
 phone: ""
 opening_hours: "Mo-Sa 07:30-22:00; Su 09:00-22:00"
-website: ""
+website: "https://www.franprix.fr/magasins/4200"
