--- a/data/cities/verrieres-le-buisson/tonton-et-tonton.yml
+++ b/data/cities/verrieres-le-buisson/tonton-et-tonton.yml
@@ -7,5 +7,5 @@ city: Verrières-le-Buisson
 street: "Boulevard du Maréchal Foch"
 housenumber: 35
 phone: "+33 1 69 30 31 86"
-opening_hours: "Mo-Sa 10:00-13:00, 15:30-19:30; Su 10:00-13:00"
+opening_hours: "Su 10:00-13:00; Tu-Fr 10:00-13:00,15:30-19:30; Sa 09:00-13:30,15:30-19:30"
 website: "http://www.tontonandco.com"
