update content and data

--- a/data/cities/paris/carrefour-city-avenue-de-flandre-2.yml
+++ b/data/cities/paris/carrefour-city-avenue-de-flandre-2.yml
@@ -1,11 +1,11 @@
-id: 6100665131
+id: 6585166085
 type: node
-latitude: 48.88702
-longitude: 2.37282
+latitude: 48.89148
+longitude: 2.3784
 postcode: "75019"
 city: Paris
 street: "Avenue de Flandre"
-housenumber: 44 bis
+housenumber: 108 bis
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 07:00-22:00; Su 09:00-22:00"
 website: ""
