--- a/data/cities/vaux-le-penil/pak-auto.yml
+++ b/data/cities/vaux-le-penil/pak-auto.yml
@@ -4,7 +4,7 @@ latitude: 48.54096
 longitude: 2.68015
 postcode: "77000"
 city: Vaux-le-Pénil
-street: "Route de Nangis"
+street: ""
 housenumber: 112
 phone: ""
 opening_hours: "Mo-Fr 09:00-12:30,14:00-18:30; Sa 09:00-14:00"
