--- a/data/cities/montrouge/cocci-market.yml
+++ b/data/cities/montrouge/cocci-market.yml
@@ -7,5 +7,5 @@ city: Montrouge
 street: "Avenue du Fort"
 housenumber: 10
 phone: "0652892188"
-opening_hours: "Mo-Fr 08:00-22:00; Sa,Su 09:00-22:00"
+opening_hours: "Mo-Su 09:00-23:00"
 website: ""
