--- a/data/cities/paris/bambinou.yml
+++ b/data/cities/paris/bambinou.yml
@@ -4,8 +4,8 @@ latitude: 48.86743
 longitude: 2.34623
 postcode: "75002"
 city: Paris
-street: ""
-housenumber: 
+street: "rue Réaumur"
+housenumber: 93
 phone: ""
-opening_hours: "Tu-Sa 11:00-19:00"
+opening_hours: "Tu-Sa 10:30-19:00; Mo 14:00-19:00"
 website: ""
