--- a/data/cities/paris/cafe-vert.yml
+++ b/data/cities/paris/cafe-vert.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue de Charenton"
 housenumber: 46
 phone: ""
-opening_hours: ""
+opening_hours: "Mo 12:00-19:30; Tu-Fr 10:00-19:30; Sa 11:00-19:30"
 website: ""
