--- a/data/cities/paris/carrefour-city-avenue-de-flandre-3.yml
+++ b/data/cities/paris/carrefour-city-avenue-de-flandre-3.yml
@@ -1,11 +1,11 @@
-id: 6585166085
+id: 6100665131
 type: node
-latitude: 48.89148
-longitude: 2.3784
+latitude: 48.88702
+longitude: 2.37282
 postcode: "75019"
 city: Paris
 street: "Avenue de Flandre"
-housenumber: 108 bis
+housenumber: 44 bis
 phone: ""
-opening_hours: "Mo-Sa 07:00-22:00; Su 09:00-22:00"
+opening_hours: ""
 website: ""
