--- a/data/cities/paris/ilan-multimedia.yml
+++ b/data/cities/paris/ilan-multimedia.yml
@@ -5,7 +5,7 @@ longitude: 2.32832
 postcode: "75014"
 city: Paris
 street: "Rue Mouton Duvernet"
-housenumber: 
+housenumber: 15
 phone: ""
 opening_hours: "Mo-Sa 10:00-20:00"
 website: ""
