--- a/data/cities/paris/pullin.yml
+++ b/data/cities/paris/pullin.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue Française"
 housenumber: 8
 phone: ""
-opening_hours: "Tu-Sa 11:00-14:00, 15:00-19:00"
+opening_hours: "Mo, Tu, Th, Fr 11:00-14:00, 15:00-19:00; We, Sa 11:00-19:00"
 website: ""
