--- a/data/cities/puteaux/chapon.yml
+++ b/data/cities/puteaux/chapon.yml
@@ -6,6 +6,6 @@ postcode: "92800"
 city: Puteaux
 street: "Rue Jean Jaurès"
 housenumber: 134
-phone: "+33 1 47 75 00 56"
-opening_hours: "Tu-Sa 10:00-19:00"
+phone: ""
+opening_hours: "Mo 13:00-19:00; Tu-Fr 10:00-14:00,15:00-19:30; Sa 10:00-14:00,15:00-20:00; Su 10:00-14:00,15:00-19:00"
 website: ""
