--- a/data/cities/puteaux/jeff-de-bruges.yml
+++ b/data/cities/puteaux/jeff-de-bruges.yml
@@ -7,5 +7,5 @@ city: Puteaux
 street: "Rue Jean Jaurès"
 housenumber: 138
 phone: "+33 1 40 81 05 44"
-opening_hours: "Tu-Sa 10:00-19:30, Su 10:00-13:00"
+opening_hours: "Fr,Sa 10:00-19:30; Su 09:30-13:00; Mo-Th 10:00-19:00"
 website: "https://www.jeff-de-bruges.com/jeff-de-bruges-puteaux"
