--- a/data/cities/vaux-le-penil/br-performance.yml
+++ b/data/cities/vaux-le-penil/br-performance.yml
@@ -4,7 +4,7 @@ latitude: 48.5374
 longitude: 2.68917
 postcode: "77000"
 city: Vaux-le-Pénil
-street: "Rue du Général Niox"
+street: ""
 housenumber: 41
 phone: ""
 opening_hours: ""
