--- a/data/cities/vaux-le-penil/noz.yml
+++ b/data/cities/vaux-le-penil/noz.yml
@@ -4,7 +4,7 @@ latitude: 48.54084
 longitude: 2.67982
 postcode: "77000"
 city: Vaux-le-Pénil
-street: "Route de Nangis"
+street: ""
 housenumber: 112
 phone: ""
 opening_hours: ""
