update content and data

--- a/data/cities/paris/conforama.yml
+++ b/data/cities/paris/conforama.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Avenue Philippe Auguste"
 housenumber: 73 – 75
 phone: ""
-opening_hours: "Mo-Sa 10:00-19:30; 2022 Jun 26 11:00-19:00"
+opening_hours: "Mo-Sa 10:00-19:30"
 website: "https://www.conforama.fr/magasins-conforama/paris-nation?lat=48.85418701171875&long=2.391892194747925&name=PARIS%20NATION"
