--- a/data/cities/saint-germain-en-laye/cheveu-de-soi.yml
+++ b/data/cities/saint-germain-en-laye/cheveu-de-soi.yml
@@ -5,7 +5,7 @@ longitude: 2.09413
 postcode: "78100"
 city: Saint-Germain-en-Laye
 street: "Rue des Bons Enfants"
-housenumber: 1
+housenumber: 1 bis
 phone: ""
 opening_hours: ""
 website: ""
