--- a/data/cities/arpajon/saint-algue.yml
+++ b/data/cities/arpajon/saint-algue.yml
@@ -7,5 +7,5 @@ city: Arpajon
 street: "Rue Guinchard"
 housenumber: 9
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-We,Fr 09:00-19:00; Th 09:00-20:00; Sa 08:00-18:00"
 website: ""
