--- a/data/cities/paris/la-main-verte-diderot.yml
+++ b/data/cities/paris/la-main-verte-diderot.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Boulevard Diderot"
 housenumber: 73
 phone: "+33 1 44 74 09 71"
-opening_hours: "Tu-Fr 10:00-20:00; Sa 09:30-20:00; Su 09:30-13:00"
+opening_hours: "Tu-Sa 10:00-20:00; Su 09:30-13:00"
 website: "https://lamainverte.bio/"
