--- a/data/cities/vert-saint-denis/seat-melun-groupe-jeannin.yml
+++ b/data/cities/vert-saint-denis/seat-melun-groupe-jeannin.yml
@@ -7,5 +7,5 @@ city: Vert-Saint-Denis
 street: "Impasse de l'Épinet"
 housenumber: 520
 phone: ""
-opening_hours: ""
-website: ""
+opening_hours: "Mo-Sa 08:00-12:00, 14:00-19:00; Su 09:00-12:00, 14:00-18:00"
+website: "http://www.jeannin-automobiles.com/"
