update content and data

--- a/data/cities/paris/decathlon-paris-aquaboulevard.yml
+++ b/data/cities/paris/decathlon-paris-aquaboulevard.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue Louis Armand"
 housenumber: 4
 phone: "+33.1 45 58 60 45"
-opening_hours: ""
+opening_hours: "Mo-Sa 09:30-20:00; Su 10:00-20:00"
 website: ""
