--- a/data/cities/paris/coccimarket-rue-henri-desgrange.yml
+++ b/data/cities/paris/coccimarket-rue-henri-desgrange.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue Henri Desgrange"
 housenumber: 4
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Th 07:00-24:00, Fr 07:00-12:30,15:30-02:00, Sa 07:00-02:00, Su 07:00-22:00"
 website: ""
