update content and data

--- a/data/cities/paris/bisous-bisous-paris.yml
+++ b/data/cities/paris/bisous-bisous-paris.yml
@@ -6,6 +6,6 @@ postcode: "75011"
 city: Paris
 street: "Rue Pétion"
 housenumber: 28
-phone: ""
+phone: "+33 6 65 76 34 43"
 opening_hours: ""
-website: ""
+website: "https://www.bisousbisousparis.com/"
