--- a/data/cities/paris/magic-circus.yml
+++ b/data/cities/paris/magic-circus.yml
@@ -6,6 +6,6 @@ postcode: "75001"
 city: Paris
 street: "Rue des Lombards"
 housenumber: 44
-phone: ""
+phone: "+33 1 40 26 48 38"
 opening_hours: ""
-website: ""
+website: "https://www.magiccircus.paris/"
