--- a/data/cities/bagneux/casino.yml
+++ b/data/cities/bagneux/casino.yml
@@ -7,5 +7,5 @@ city: Bagneux
 street: "Avenue Aristide Briand"
 housenumber: 96
 phone: "+33 1 80 73 21 00"
-opening_hours: "Mon-Sat 06-23:59, Sun 08-23:59"
+opening_hours: "Mo-Sa 06:00-23:59, Su 08:00-23:59"
 website: "https://magasins.supercasino.fr/fr/ile-de-france/hauts-de-seine/92007/bagneux"
