--- a/data/cities/chelles/sauvages-et-cultivees.yml
+++ b/data/cities/chelles/sauvages-et-cultivees.yml
@@ -7,5 +7,5 @@ city: Chelles
 street: "Chemin du Beauzet"
 housenumber: 1
 phone: "+33 7 82 23 95 63"
-opening_hours: "Sa 10:00-13:00"
-website: ""
+opening_hours: "May-Dec: Sa 10:00-13:00"
+website: "https://www.sauvages-cultivees.fr/"
