--- a/data/cities/paris/le-gamin-a-dix-doigts-rue-sedaine.yml
+++ b/data/cities/paris/le-gamin-a-dix-doigts-rue-sedaine.yml
@@ -6,6 +6,6 @@ postcode: "75011"
 city: Paris
 street: "Rue Sedaine"
 housenumber: 72
-phone: ""
+phone: "+33 9 80 44 99 64"
 opening_hours: ""
-website: ""
+website: "https://www.legaminadixdoigts.com/"
