--- a/data/cities/bois-darcy/leroy-merlin.yml
+++ b/data/cities/bois-darcy/leroy-merlin.yml
@@ -7,5 +7,5 @@ city: Bois-d'Arcy
 street: "ZAC de la Croix Bonnet, avenue Fritz Lang"
 housenumber: 
 phone: "+33130142828"
-opening_hours: "09:00-20:00; Su,PH 09:00-19:00; 2023 Jul 14 09:00-20:00 open exceptionnel"
+opening_hours: "09:00-20:00; PH 09:00-20:00; PH Su,Su 09:00-19:00; Dec 25, Jan 01, May 01 off exceptionnel"
 website: ""
