--- a/data/cities/issy-les-moulineaux/gifi.yml
+++ b/data/cities/issy-les-moulineaux/gifi.yml
@@ -6,6 +6,6 @@ postcode: "92130"
 city: Issy-les-Moulineaux
 street: "Avenue de la République"
 housenumber: 32
-phone: "0158882042"
+phone: ""
 opening_hours: "Mo-Sa 09:15-19:15"
-website: "https://www.bricolex.fr/"
+website: ""
