--- a/data/cities/issy-les-moulineaux/idkids-obaibi-okaidi-oxybul.yml
+++ b/data/cities/issy-les-moulineaux/idkids-obaibi-okaidi-oxybul.yml
@@ -7,5 +7,5 @@ city: Issy-les-Moulineaux
 street: "Promenade Cœur de Ville"
 housenumber: 
 phone: "+33188899967"
-opening_hours: "Mo-Sa 20:00-19:30"
+opening_hours: "Mo-Sa 10:00-19:30; Su 10:00-19:00;"
 website: "https://www.okaidi.fr/Shop/idkids-issy-les-moulineaux/3833"
