--- a/data/cities/malakoff/solucette.yml
+++ b/data/cities/malakoff/solucette.yml
@@ -7,5 +7,5 @@ city: Malakoff
 street: "Avenue Pierre Larousse"
 housenumber: 18
 phone: ""
-opening_hours: ""
+opening_hours: "Tu-Sa 10:30-14:00,15:00-19:00"
 website: ""
