--- a/data/cities/vert-saint-denis/seat-melun-groupe-jeannin.yml
+++ b/data/cities/vert-saint-denis/seat-melun-groupe-jeannin.yml
@@ -8,4 +8,4 @@ street: "Impasse de l'Épinet"
 housenumber: 520
 phone: ""
 opening_hours: "Mo-Sa 08:00-12:00, 14:00-19:00; Su 09:00-12:00, 14:00-18:00"
-website: "http://www.jeannin-automobiles.com/"
+website: "https://www.jeannin-automobiles.com/"
