update content and data

--- a/data/cities/avon/carrefour-market.yml
+++ b/data/cities/avon/carrefour-market.yml
@@ -7,5 +7,5 @@ city: Avon
 street: "Avenue Franklin Roosevelt"
 housenumber: 36
 phone: "+33 1 64 22 48 15"
-opening_hours: "Mo-Sa 08:30-20:30, Su 09:00-12:30"
+opening_hours: "Mo-Sa 09:00-20:30; Su 09:00-12:30"
 website: "https://www.carrefour.fr/magasin/market-avon"
