--- a/data/cities/avon/chambre-funeraire-avon.yml
+++ b/data/cities/avon/chambre-funeraire-avon.yml
@@ -7,5 +7,5 @@ city: Avon
 street: "Avenue du Général de Gaulle"
 housenumber: 19
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 09:00-12:00,14:00-18:00"
 website: ""
