--- a/data/cities/combs-la-ville/tchip-coiffure.yml
+++ b/data/cities/combs-la-ville/tchip-coiffure.yml
@@ -7,5 +7,5 @@ city: Combs-la-Ville
 street: "Avenue de la République"
 housenumber: 
 phone: "+33 1 60 60 08 08"
-opening_hours: "Tu 09:30-20:00; We-Sa 09:30-19:00"
+opening_hours: "Mo 10:00-18:00; Tu 09:30-18:30; Fr 09:30-18:30; Sa 09:00-18:00"
 website: "https://tchip.fr/salon/view/374"
