--- a/data/cities/houilles/pfg.yml
+++ b/data/cities/houilles/pfg.yml
@@ -7,5 +7,5 @@ city: Houilles
 street: "Rue Gambetta"
 housenumber: 
 phone: "+33139575433"
-opening_hours: ""
+opening_hours: "Mo-Fr 09:00-12:00,14:00-18:00; Sa 09:00-12:00,14:00-16:00"
 website: "https://www.pfg.fr/nos-agences/yvelines/houilles/agence-pompes-funebres-pfg-houilles-20506"
