--- a/data/cities/paris/lart-invisible.yml
+++ b/data/cities/paris/lart-invisible.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue Delambre"
 housenumber: 20
 phone: "+33 1 53 71 97 84"
-opening_hours: "Su-Mo 11:00-14:00,15:00-19:00; Tu-Sa 10:00-20:00"
+opening_hours: "Tu-Su 11:00-14:00,15:00-19:00"
 website: ""
