update content and data

--- a/data/cities/paris/merci-jerome.yml
+++ b/data/cities/paris/merci-jerome.yml
@@ -1,11 +1,11 @@
-id: 4905285039
+id: 2885930975
 type: node
-latitude: 48.84943
-longitude: 2.29804
-postcode: "75015"
+latitude: 48.8295
+longitude: 2.34799
+postcode: "75013"
 city: Paris
-street: "Avenue de la Motte-Picquet"
-housenumber: 66
-phone: "+33 1 47 83 32 87"
-opening_hours: "Mo-Sa 07:00-20:30; Su 07:00-20:00"
-website: "https://mercijerome.com/"
+street: "Boulevard Auguste Blanqui"
+housenumber: 73
+phone: ""
+opening_hours: "Tu-Fr 07:00-20:30; Sa-Su 07:00-20:00"
+website: ""
