--- a/data/cities/asnieres-sur-seine/optic-2000.yml
+++ b/data/cities/asnieres-sur-seine/optic-2000.yml
@@ -7,5 +7,5 @@ city: Asnières-sur-Seine
 street: "Rue Eugénie Eboué"
 housenumber: 4
 phone: ""
-opening_hours: ""
+opening_hours: "Tu-Sa 09:30-19:00"
 website: ""
