--- a/data/cities/chelles/boulangerie-de-la-gare.yml
+++ b/data/cities/chelles/boulangerie-de-la-gare.yml
@@ -7,5 +7,5 @@ city: Chelles
 street: "Avenue de la Résistance"
 housenumber: 70
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Fr 06:45-20:00; Sa,Su 07:00-20:00"
 website: ""
