--- a/data/cities/chelles/epicerie-coeur-dechange.yml
+++ b/data/cities/chelles/epicerie-coeur-dechange.yml
@@ -7,5 +7,5 @@ city: Chelles
 street: "Avenue Pierre Dupont"
 housenumber: 9
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 15:00-20:00"
 website: ""
