--- a/data/cities/paris/le-petit-ballon.yml
+++ b/data/cities/paris/le-petit-ballon.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue du Rocher"
 housenumber: 43
 phone: ""
-opening_hours: ""
+opening_hours: "Tu-Th 16:00-20:00; Fr,Sa 12:00-20:00"
 website: "https://www.lepetitballon.com/grande-cave-paris"
