--- a/data/cities/paris/patisserie-bre.yml
+++ b/data/cities/paris/patisserie-bre.yml
@@ -6,6 +6,6 @@ postcode: "75006"
 city: Paris
 street: "Rue Littré"
 housenumber: 8
-phone: "+33158901547"
-opening_hours: ""
-website: "https://www.lesnouveauxcyclistes.com/"
+phone: "+33186040053"
+opening_hours: "Tu-Sa 9:00-19:00, Su 10:00-15:00"
+website: "https://brepatisserie.com/"
