--- a/data/cities/saint-leu-la-foret/la-fontaine-aux-pralines.yml
+++ b/data/cities/saint-leu-la-foret/la-fontaine-aux-pralines.yml
@@ -7,5 +7,5 @@ city: Saint-Leu-la-Forêt
 street: "Rue du Général Leclerc"
 housenumber: 41
 phone: ""
-opening_hours: "Tu-Fr 10:30-19:00; Sa 09:30-19:00"
+opening_hours: "Tu-Fr 10:30-19:00; Sa 09:30-19:00; Su 09:00-13:00"
 website: "https://yvesthuries.com/chocolatier/saint-leu-la-foret-boutique-103"
