--- a/data/cities/suresnes/intermarche-express.yml
+++ b/data/cities/suresnes/intermarche-express.yml
@@ -7,5 +7,5 @@ city: Suresnes
 street: "Avenue Jean Jaurès"
 housenumber: 48
 phone: "+33 1 41 44 99 10"
-opening_hours: ""
+opening_hours: "Mo-Sa 08:30-21:00; Su 09:00-21:00"
 website: "https://www.intermarche.com/magasins/11657/suresnes-92150/infos-pratiques"
