--- a/data/cities/villejuif/le-fournil.yml
+++ b/data/cities/villejuif/le-fournil.yml
@@ -7,5 +7,5 @@ city: Villejuif
 street: "Rue de Verdun"
 housenumber: 70
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 07:00-20:30"
 website: ""
