update content and data

--- a/data/cities/cergy/le-petit-maraicher.yml
+++ b/data/cities/cergy/le-petit-maraicher.yml
@@ -1,11 +1,11 @@
 id: 7787206093
 type: node
-latitude: 49.02327
-longitude: 2.08123
+latitude: 49.02302
+longitude: 2.08192
 postcode: "95000"
 city: Cergy
-street: "Chemin des Voies"
-housenumber: 42
+street: "Chemin des Pâtis"
+housenumber: 49
 phone: ""
-opening_hours: "Mo-Sa 15:00-18:00"
+opening_hours: "We-Fr 15:00-19:00; Sa 15:00-18:00"
 website: "https://www.lepetitmaraicher.fr"
