--- a/data/cities/cergy/les-plaisirs-du-jardin.yml
+++ b/data/cities/cergy/les-plaisirs-du-jardin.yml
@@ -7,5 +7,5 @@ city: Cergy
 street: "Chemin des Pâtis"
 housenumber: 8
 phone: "+33 6 74 09 96 42"
-opening_hours: "Th 16:30-18:00; Fr 13:30-18:00"
+opening_hours: "We 9:30-12:30; Th 16:00-19:00; Fr 9:30-19:00; Sa 9:30-12:30"
 website: "https://lesplaisirsdujardin.fr/"
