--- a/data/cities/pierrelaye/fete-sensation.yml
+++ b/data/cities/pierrelaye/fete-sensation.yml
@@ -7,5 +7,5 @@ city: Pierrelaye
 street: "Boulevard du Havre"
 housenumber: 262
 phone: "+33 1 39 60 60 60"
-opening_hours: ""
-website: ""
+opening_hours: "Mo-Su 09:30-19:30"
+website: "https://www.fetesensation.fr/magasin/paris-nord-ouest-95-herblay/"
