--- a/data/cities/ermont/day-by-day.yml
+++ b/data/cities/ermont/day-by-day.yml
@@ -6,6 +6,6 @@ postcode: "95120"
 city: Ermont
 street: "Avenue du Président Georges Pompidou"
 housenumber: 
-phone: ""
-opening_hours: ""
+phone: "+33607700057"
+opening_hours: "Mo 14:00-19:00; Tu-Sa 10:00-19:00"
 website: "https://daybyday-shop.com/magasin/ermont"
