--- a/data/cities/versailles/coup-de-coudre.yml
+++ b/data/cities/versailles/coup-de-coudre.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: "Rue du Vieux Versailles"
 housenumber: 29
 phone: ""
-opening_hours: "We,Th,Sa 10:00-19:00; Tu 14:00-19:00; Fr 14:00-21:00"
+opening_hours: "Tu-Th 10:00-13:00,14:00-19:00; Fr 14:00-21:00; Sa 11:00-21:00"
 website: ""
