update content and data

--- a/data/cities/athis-mons/bat-modelisme.yml
+++ b/data/cities/athis-mons/bat-modelisme.yml
@@ -8,4 +8,4 @@ street: "Avenue de Morangis"
 housenumber: 137
 phone: "+33 1 69 84 87 51"
 opening_hours: ""
-website: "http://www.batmodelisme.com/"
+website: "https://www.batmodelisme.com/"
