--- a/data/cities/athis-mons/local-commercial-vacant-salon-de-coiffure.yml
+++ b/data/cities/athis-mons/local-commercial-vacant-salon-de-coiffure.yml
@@ -8,4 +8,4 @@ street: "Avenue du 18 Avril 1944"
 housenumber: 107
 phone: ""
 opening_hours: ""
-website: "http://www.mairie-athis-mons.fr/actualite/article_3933.htm"
+website: "https://www.mairie-athis-mons.fr/actualite/article_3933.htm"
