--- a/data/cities/ivry-sur-seine/auto-garage-ampere.yml
+++ b/data/cities/ivry-sur-seine/auto-garage-ampere.yml
@@ -8,4 +8,4 @@ street: "Rue Ampère"
 housenumber: 5
 phone: "+33 1 46 72 60 40"
 opening_hours: ""
-website: "http://www.easycarrosserie.com"
+website: "https://www.easycarrosserie.com/"
