--- a/data/cities/paris/a-la-belle-viande.yml
+++ b/data/cities/paris/a-la-belle-viande.yml
@@ -8,4 +8,4 @@ street: "Rue Jean de La Fontaine"
 housenumber: 2
 phone: ""
 opening_hours: "Tu-Fr 08:30-13:30,15:30-19:30; Sa 08:30-19:00"
-website: "http://www.gillespudlowski.com/89343/produits/paris-16e-les-bonnes-limousines-de-serge-horeau"
+website: "https://www.gillespudlowski.com/89343/produits/paris-16e-les-bonnes-limousines-de-serge-horeau"
