--- a/data/cities/paris/fromages-vins-salaisons.yml
+++ b/data/cities/paris/fromages-vins-salaisons.yml
@@ -8,4 +8,4 @@ street: "Rue Popincourt"
 housenumber: 40
 phone: "+33 1 43 38 29 84"
 opening_hours: ""
-website: "http://moots.fr/"
+website: "https://moots.fr/"
