--- a/data/cities/paris/megacom-ik.yml
+++ b/data/cities/paris/megacom-ik.yml
@@ -8,4 +8,4 @@ street: "Boulevard Saint-Marcel"
 housenumber: 13
 phone: ""
 opening_hours: "Th-Sa 12:30-19:30"
-website: "http://www.megacomik.fr"
+website: "https://megacomik.fr/"
