--- a/data/cities/saint-brice-sous-foret/actadem-95-garde-de-meuble.yml
+++ b/data/cities/saint-brice-sous-foret/actadem-95-garde-de-meuble.yml
@@ -8,4 +8,4 @@ street: "Rue de Piscop"
 housenumber: 16
 phone: "+33139868825"
 opening_hours: "Mo-Fr 09:00-18:00"
-website: "http://www.actadem.fr/demenagement-ile-de-france/self-stockage-95.php"
+website: "https://actadem.fr/demenagement-ile-de-france/self-stockage-95.php"
