--- a/data/cities/saint-denis/andines.yml
+++ b/data/cities/saint-denis/andines.yml
@@ -8,4 +8,4 @@ street: "Rue de la Poterie"
 housenumber: 5
 phone: ""
 opening_hours: ""
-website: "http://www.andines.com"
+website: "https://www.andines.com/"
