--- a/data/cities/saint-remy-les-chevreuse/armor-ink-tattoo.yml
+++ b/data/cities/saint-remy-les-chevreuse/armor-ink-tattoo.yml
@@ -8,4 +8,4 @@ street: "Rue de Versailles"
 housenumber: 2
 phone: ""
 opening_hours: "Mo-Sa 13:00-19:00"
-website: "http://www.armorink-tattoo.com/"
+website: "https://www.armorink-tattoo.com/"
