--- a/data/cities/antony/godot-et-fils.yml
+++ b/data/cities/antony/godot-et-fils.yml
@@ -7,5 +7,5 @@ city: Antony
 street: "Avenue de la Division Leclerc"
 housenumber: 
 phone: ""
-opening_hours: ""
-website: ""
+opening_hours: "Mo-Fr 09:30-18:30"
+website: "https://godotetfils.com/antony/"
