--- a/data/cities/bezons/trek.yml
+++ b/data/cities/bezons/trek.yml
@@ -8,4 +8,4 @@ street: "Avenue Gabriel Péri"
 housenumber: 20
 phone: "+33 1 30 76 33 23"
 opening_hours: "Mo,Tu,Fr 10:00-13:30,14:30-19:00; Th 10:00-13:30,14:30-18:00; Sa 09:30-18:30; We,Su off"
-website: "http://www.trek-tbs-bezons.fr/"
+website: "https://www.trek-tbs-bezons.fr/"
