--- a/data/cities/le-plessis-pate/continent-dasie.yml
+++ b/data/cities/le-plessis-pate/continent-dasie.yml
@@ -8,4 +8,4 @@ street: "Rue du Bicentenaire de la Révolution"
 housenumber: 1
 phone: "+33 1 78 83 56 38"
 opening_hours: ""
-website: "http://www.continentdasie.fr/"
+website: "https://www.continentdasie.fr/"
