--- a/data/cities/le-port-marly/la-boutique-du-velo.yml
+++ b/data/cities/le-port-marly/la-boutique-du-velo.yml
@@ -8,4 +8,4 @@ street: "Avenue Simon Vouet"
 housenumber: 16quintum
 phone: ""
 opening_hours: "Tu-Sa 10:00-19:30; Th 10:00-21:00"
-website: "http://www.lbvelo.fr/"
+website: "https://www.lbvelo.fr/"
