--- a/data/cities/meudon/belle-vue.yml
+++ b/data/cities/meudon/belle-vue.yml
@@ -7,5 +7,5 @@ city: Meudon
 street: "Rue Marcel Allégot"
 housenumber: 
 phone: ""
-opening_hours: "Tu-Fr,PH 09:30-19:30;Sa,PH 09:30-13:00,14:30-19:00"
+opening_hours: "Tu-Fr 09:30-19:30; Sa 09:30-13:00,15:00-19:00"
 website: ""
