--- a/data/cities/montereau-fault-yonne/la-conquete-du-pain.yml
+++ b/data/cities/montereau-fault-yonne/la-conquete-du-pain.yml
@@ -7,5 +7,5 @@ city: Montereau-Fault-Yonne
 street: "Avenue du Général de Gaulle"
 housenumber: 43
 phone: ""
-opening_hours: ""
+opening_hours: "Mo,Tu,Th,Fr 06:30-21:00; Sa,Su,PH 07:00-21:00"
 website: ""
