--- a/data/cities/ozoir-la-ferriere/the-aces-tattoo-shop.yml
+++ b/data/cities/ozoir-la-ferriere/the-aces-tattoo-shop.yml
@@ -8,4 +8,4 @@ street: "Avenue du Général Leclerc"
 housenumber: 4
 phone: ""
 opening_hours: "Mo-Sa 10:00-19:00; Su off"
-website: "http://www.theacestattoo.net/site-web/?Ozoir-la-Ferriere"
+website: "https://theacestattoo.net/site-web/?Ozoir-la-Ferriere"
