--- a/data/cities/paris/aime-thai-massage-spa.yml
+++ b/data/cities/paris/aime-thai-massage-spa.yml
@@ -8,4 +8,4 @@ street: "Rue de la Folie-Méricourt"
 housenumber: 84
 phone: "+33 9 73 60 49 67"
 opening_hours: "Mo-Sa"
-website: "http://www.aime-thai-massage-spa.com/"
+website: "https://www.aime-thai-massage-spa.com/"
