--- a/data/cities/paris/au-service-du-bureau.yml
+++ b/data/cities/paris/au-service-du-bureau.yml
@@ -8,4 +8,4 @@ street: "Rue Bois-le-Vent"
 housenumber: 14
 phone: "+33 1 45 27 99 99"
 opening_hours: ""
-website: "http://www.au-service-du-bureau.com/"
+website: "https://www.au-service-du-bureau.com/"
