--- a/data/cities/paris/la-cave-du-ballon-rouge.yml
+++ b/data/cities/paris/la-cave-du-ballon-rouge.yml
@@ -8,4 +8,4 @@ street: "Rue Vicq d'Azir"
 housenumber: 1
 phone: "+33 9 83 88 25 46"
 opening_hours: ""
-website: "http://www.leballonrouge.fr/"
+website: "https://www.leballonrouge.fr/"
