--- a/data/cities/paris/laverie-du-quartier-rue-de-lancry.yml
+++ b/data/cities/paris/laverie-du-quartier-rue-de-lancry.yml
@@ -8,4 +8,4 @@ street: "Rue de Lancry"
 housenumber: 36
 phone: ""
 opening_hours: "Mo-Su 07:00-21:30"
-website: "http://laveries-paris.e-monsite.com/pages/plan-d-acces.html"
+website: "https://laveries-paris.e-monsite.com/pages/plan-d-acces.html"
