--- a/data/cities/pontault-combault/sun-brazil.yml
+++ b/data/cities/pontault-combault/sun-brazil.yml
@@ -8,4 +8,4 @@ street: "Rue Saint-Claude"
 housenumber: 1
 phone: "+33 1 60 29 14 01"
 opening_hours: ""
-website: "http://sunbrazil.fr/"
+website: "https://sunbrazil.fr/"
