--- a/data/cities/puteaux/de-gaulle-pressing.yml
+++ b/data/cities/puteaux/de-gaulle-pressing.yml
@@ -8,4 +8,4 @@ street: "Avenue du Général de Gaulle"
 housenumber: 75
 phone: "+33 9 81 96 89 41"
 opening_hours: "Mo-Fr 08:00-12:00,14:00-19:30, Sa 08:30-12:30,14:30-19:30"
-website: "http://www.degaullepressing.fr"
+website: "https://degaullepressing.fr/"
